versions/18.7.1/kn/bridge.md
- ರಕ್ತದಲ್ಲಿನ ಆಮ್ಲಜನಕ: `bridge:root=com.apple.OxygenSaturationSettings`
- ಕೈ ತೊಳೆಯುವಿಕೆ: `bridge:root=com.apple.BrookBridgeSettings`
- ಕೈ ತೊಳೆಯುವಿಕೆ → ನೋಟಿಫಿಕೇಷನ್‌ಗಳನ್ನು ಅನುಮತಿಸಿ: `bridge:root=com.apple.BrookBridgeSettings#ALLOW_NOTIFICATIONS_ID`
- ಕೈ ತೊಳೆಯುವಿಕೆ → ನೋಟಿಫಿಕೇಷನ್ ಸೆಂಟರ್‌ಗೆ ಕಳುಹಿಸಿ: `bridge:root=com.apple.BrookBridgeSettings#SEND_TO_NOTIFICATION_CENTER_ID`
- ಕೈ ತೊಳೆಯುವಿಕೆ → ನೋಟಿಫಿಕೇಷನ್‌ಗಳು ಆಫ್: `bridge:root=com.apple.BrookBridgeSettings#NOTIFICATIONS_OFF_ID`
- ಕೈ ತೊಳೆಯುವಿಕೆ → ನೋಟಿಫಿಕೇಷನ್ ಗ್ರೂಪಿಂಗ್: `bridge:root=com.apple.BrookBridgeSettings&path=NOTIFICATION_COALESCING_ID`
- ಕೈ ತೊಳೆಯುವಿಕೆ → ಕೈ ತೊಳೆಯುವಿಕೆ ಟೈಮರ್: `bridge:root=com.apple.BrookBridgeSettings#HANDWASHING_TIMER_ID`
- ಡಿಸ್‌ಪ್ಲೇ ಮತ್ತು ಬ್ರೈಟ್‌ನೆಸ್: `bridge:root=DISPLAY_AND_BRIGHTNESS`
- ಡಿಸ್‌ಪ್ಲೇ ಮತ್ತು ಬ್ರೈಟ್‌ನೆಸ್ → ಸಕ್ರಿಯ ಕಾಲಾವಧಿ: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=Wake%20Duration`
- ಡಿಸ್‌ಪ್ಲೇ ಮತ್ತು ಬ್ರೈಟ್‌ನೆಸ್ → ಸಕ್ರಿಯ ಕಾಲಾವಧಿ → ಟ್ಯಾಪ್ ಮಾಡಿದಾಗ: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=Wake%20Duration#ON_TAP_GROUP_ID`
- ಡಿಸ್‌ಪ್ಲೇ ಮತ್ತು ಬ್ರೈಟ್‌ನೆಸ್ → ಸಕ್ರಿಯ ಕಾಲಾವಧಿ → 15 ಸೆಕೆಂಡ್‌ಗಳ ಕಾಲ ಸಕ್ರಿಯಗೊಳಿಸಿ: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=Wake%20Duration#SHORT_WAKE_ID`
- ಡಿಸ್‌ಪ್ಲೇ ಮತ್ತು ಬ್ರೈಟ್‌ನೆಸ್ → ಸಕ್ರಿಯ ಕಾಲಾವಧಿ → 70 ಸೆಕೆಂಡ್‌ಗಳ ಕಾಲ ಸಕ್ರಿಯಗೊಳಿಸಿ: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=Wake%20Duration#LONG_WAKE_ID`
- ಡಿಸ್‌ಪ್ಲೇ ಮತ್ತು ಬ್ರೈಟ್‌ನೆಸ್ → ಬ್ರೈಟ್‌ನೆಸ್: `bridge:root=DISPLAY_AND_BRIGHTNESS#BRIGHTNESS_LABEL`
- ಡಿಸ್‌ಪ್ಲೇ ಮತ್ತು ಬ್ರೈಟ್‌ನೆಸ್ → ಯಾವಾಗಲೂ ಆನ್: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID`
- ಡಿಸ್‌ಪ್ಲೇ ಮತ್ತು ಬ್ರೈಟ್‌ನೆಸ್ → ಯಾವಾಗಲೂ ಆನ್ → ಯಾವಾಗಲೂ ಆನ್: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID#TRITIUM_ID`
- ಡಿಸ್‌ಪ್ಲೇ ಮತ್ತು ಬ್ರೈಟ್‌ನೆಸ್ → ಯಾವಾಗಲೂ ಆನ್ → ಮಣಿಕಟ್ಟು ಕೆಳಗೆ: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID#TRITIUM_PRIVACY_GROUP_ID`
- ಡಿಸ್‌ಪ್ಲೇ ಮತ್ತು ಬ್ರೈಟ್‌ನೆಸ್ → ಯಾವಾಗಲೂ ಆನ್ → ನೋಟಿಫಿಕೇಷನ್‌ಗಳನ್ನು ತೋರಿಸಿ: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Notifications`
- ಡಿಸ್‌ಪ್ಲೇ ಮತ್ತು ಬ್ರೈಟ್‌ನೆಸ್ → ಯಾವಾಗಲೂ ಆನ್ → ನೋಟಿಫಿಕೇಷನ್‌ಗಳನ್ನು ತೋರಿಸಿ → ನೋಟಿಫಿಕೇಷನ್‌ಗಳನ್ನು ತೋರಿಸಿ: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Notifications#APP_BACKLIGHT_PRIVACY_GLOBAL_APP`
- ಡಿಸ್‌ಪ್ಲೇ ಮತ್ತು ಬ್ರೈಟ್‌ನೆಸ್ → ಯಾವಾಗಲೂ ಆನ್ → ನೋಟಿಫಿಕೇಷನ್‌ಗಳನ್ನು ತೋರಿಸಿ → APPLE WATCH ಆ್ಯಪ್‌ಗಳು: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Notifications#APP_GROUP_ID`
- ಡಿಸ್‌ಪ್ಲೇ ಮತ್ತು ಬ್ರೈಟ್‌ನೆಸ್ → ಯಾವಾಗಲೂ ಆನ್ → ಆ್ಯಪ್‌ಗಳನ್ನು ತೋರಿಸಿ: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Apps`
- ಡಿಸ್‌ಪ್ಲೇ ಮತ್ತು ಬ್ರೈಟ್‌ನೆಸ್ → ಯಾವಾಗಲೂ ಆನ್ → ಆ್ಯಪ್‌ಗಳನ್ನು ತೋರಿಸಿ → ಆ್ಯಪ್‌ಗಳನ್ನು ತೋರಿಸಿ: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Apps#APP_BACKLIGHT_PRIVACY_GLOBAL_APP`
- ಡಿಸ್‌ಪ್ಲೇ ಮತ್ತು ಬ್ರೈಟ್‌ನೆಸ್ → ಯಾವಾಗಲೂ ಆನ್ → ಆ್ಯಪ್‌ಗಳನ್ನು ತೋರಿಸಿ → ಆ್ಯಪ್‌ಗಳು: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Apps#APP_GROUP_ID`
- ಡಿಸ್‌ಪ್ಲೇ ಮತ್ತು ಬ್ರೈಟ್‌ನೆಸ್ → ಪಠ್ಯದ ಗಾತ್ರ: `bridge:root=DISPLAY_AND_BRIGHTNESS#TEXT_SIZE`
- ಡಿಸ್‌ಪ್ಲೇ ಮತ್ತು ಬ್ರೈಟ್‌ನೆಸ್ → ಬೋಲ್ಡ್ ಪಠ್ಯ: `bridge:root=DISPLAY_AND_BRIGHTNESS#BOLD_TEXT`
- ಡಿಸ್‌ಪ್ಲೇ ಮತ್ತು ಬ್ರೈಟ್‌ನೆಸ್ → ಸಕ್ರಿಯಗೊಳಿಸಿ: `bridge:root=DISPLAY_AND_BRIGHTNESS#WAKE`
- ಡಿಸ್‌ಪ್ಲೇ ಮತ್ತು ಬ್ರೈಟ್‌ನೆಸ್ → ಮಣಿಕಟ್ಟನ್ನು ಎತ್ತಿದಾಗ ಸಕ್ರಿಯಗೊಳಿಸಿ: `bridge:root=DISPLAY_AND_BRIGHTNESS#WAKE_SCREEN_ON_WRIST_RAISE_SWITCH_ID`
- ಡಿಸ್‌ಪ್ಲೇ ಮತ್ತು ಬ್ರೈಟ್‌ನೆಸ್ → ಕ್ರೌನ್ ತಿರುಗಿಸಿದಾಗ ಸಕ್ರಿಯಗೊಳಿಸಿ: `bridge:root=DISPLAY_AND_BRIGHTNESS#WAKE_SCREEN_ON_CROWN_UP_SWITCH_ID`
- ಫೋಟೋಸ್: `bridge:root=com.apple.NanoPhotosBridgeSettings`
- ಫೋಟೋಸ್ → ಫೋಟೋ ಸಿಂಕ್ ಮಾಡುವಿಕೆ: `bridge:root=com.apple.NanoPhotosBridgeSettings#Photo%20Syncing`
- ಫೋಟೋಸ್ → ನೆನಪುಗಳು: `bridge:root=com.apple.NanoPhotosBridgeSettings#Memories`
- ಫೋಟೋಸ್ → ನೆನಪುಗಳನ್ನು ಸಿಂಕ್ ಮಾಡಿ: `bridge:root=com.apple.NanoPhotosBridgeSettings#Sync%20Memories`
- ಫೋಟೋಸ್ → ಫೀಚರ್ಡ್ ಫೋಟೋಗಳು: `bridge:root=com.apple.NanoPhotosBridgeSettings#Featured%20Photos`
- ಫೋಟೋಸ್ → ಫೀಚರ್ ಮಾಡಲಾದ ಫೋಟೋಗಳನ್ನು ಸಿಂಕ್ ಮಾಡಿ: `bridge:root=com.apple.NanoPhotosBridgeSettings#Sync%20Featured%20Photos`
- ಫೋಟೋಸ್ → ಆಲ್ಬಮ್: `bridge:root=com.apple.NanoPhotosBridgeSettings#Album`
- ಫೋಟೋಸ್ → ಆಲ್ಬಮ್ ಸಿಂಕ್ ಮಾಡಿ: `bridge:root=com.apple.NanoPhotosBridgeSettings&path=Sync%20Album`
- ಫೋಟೋಸ್ → ಫೋಟೋಗಳ ಮಿತಿ: `bridge:root=com.apple.NanoPhotosBridgeSettings&path=Photos%20Limit`
- ಫೋಟೋಸ್ → ನೋಟಿಫಿಕೇಷನ್ ಸೆಟ್ಟಿಂಗ್ಸ್: `bridge:root=com.apple.NanoPhotosBridgeSettings#MIRROR_RADIO_GROUP_ID`
- ಫೋಟೋಸ್ → ನನ್ನ iPhone ಮಿರರ್ ಮಾಡಿ: `bridge:root=com.apple.NanoPhotosBridgeSettings#MIRROR_MY_COMPANION_ID`
- ಫೋಟೋಸ್ → ಕಸ್ಟಮ್: `bridge:root=com.apple.NanoPhotosBridgeSettings#CUSTOM_ID`
- ಕಾಂಪ್ಲಿಕೇಷನ್‌ಗಳು: `bridge:root=COMPLICATIONS`
- ಆ್ಯಪ್ ವ್ಯೂ: `bridge:root=APP_VIEW_ID`
- ಸಾಮಾನ್ಯ: `bridge:root=GENERAL_LINK`
- ಸಾಮಾನ್ಯ → ಕುರಿತು: `bridge:root=GENERAL_LINK&path=ABOUT`
- ಸಾಮಾನ್ಯ → ಕುರಿತು → ಹೆಸರು: `bridge:root=GENERAL_LINK&path=ABOUT/NAME_CELL_ID`
- ಸಾಮಾನ್ಯ → ಕುರಿತು → ಸೀಮಿತ ವಾರಂಟಿ: `bridge:root=GENERAL_LINK&path=ABOUT/WARRANTY_DESCRIPTION`
- ಸಾಮಾನ್ಯ → ಕುರಿತು → ಸೀಮಿತ ವಾರಂಟಿ → ಸೀಮಿತ ವಾರಂಟಿ: `bridge:root=GENERAL_LINK&path=ABOUT/WARRANTY_DESCRIPTION#Limited%20Warranty`
- ಸಾಮಾನ್ಯ → ಕುರಿತು → ಸೀಮಿತ ವಾರಂಟಿ → ಕವರೇಜ್ ವಿವರಗಳು: `bridge:root=GENERAL_LINK&path=ABOUT/WARRANTY_DESCRIPTION#COVERAGE%20DETAILS`
- ಸಾಮಾನ್ಯ → ಕುರಿತು → ಸೀಮಿತ ವಾರಂಟಿ → ಹಾರ್ಡ್‌ವೇರ್ ಕವರೇಜ್: `bridge:root=GENERAL_LINK&path=ABOUT/WARRANTY_DESCRIPTION#Hardware%20Coverage`
- ಸಾಮಾನ್ಯ → ಕುರಿತು → ಸೀಮಿತ ವಾರಂಟಿ → ಚ್ಯಾಟ್ ಮತ್ತು ಫೋನ್ ಬೆಂಬಲ: `bridge:root=GENERAL_LINK&path=ABOUT/WARRANTY_DESCRIPTION#Chat%20&%20Phone%20Support`
- ಸಾಮಾನ್ಯ → ಕುರಿತು → ಹಾಡುಗಳು: `bridge:root=GENERAL_LINK&path=ABOUT#SONGS_CELL_ID`
- ಸಾಮಾನ್ಯ → ಕುರಿತು → ಫೋಟೋಸ್: `bridge:root=GENERAL_LINK&path=ABOUT#PHOTOS_CELL_ID`
- ಸಾಮಾನ್ಯ → ಕುರಿತು → ಅಪ್ಲಿಕೇಶನ್‌ಗಳು: `bridge:root=GENERAL_LINK&path=ABOUT#APPLICATIONS_CELL_ID`
- ಸಾಮಾನ್ಯ → ಕುರಿತು → ಸಾಮರ್ಥ್ಯ: `bridge:root=GENERAL_LINK&path=ABOUT#STORAGE_CAPACITY_CELL_ID`
- ಸಾಮಾನ್ಯ → ಕುರಿತು → ಲಭ್ಯವಿದೆ: `bridge:root=GENERAL_LINK&path=ABOUT#STORAGE_AVAILABLE_CELL_ID`
- ಸಾಮಾನ್ಯ → ಕುರಿತು → ಆವೃತ್ತಿ: `bridge:root=GENERAL_LINK&path=ABOUT#OS_VERSION_CELL_ID`
- ಸಾಮಾನ್ಯ → ಕುರಿತು → ನೆಟ್‌ವರ್ಕ್ ಪೂರೈಕೆದಾರರು: `bridge:root=GENERAL_LINK&path=ABOUT#CARRIER_CELL_ID`
- ಸಾಮಾನ್ಯ → ಕುರಿತು → ಮಾಡಲ್: `bridge:root=GENERAL_LINK&path=ABOUT#DEVICE_MODEL_CELL_ID`
- ಸಾಮಾನ್ಯ → ಕುರಿತು → ಕ್ರಮ ಸಂಖ್ಯೆ: `bridge:root=GENERAL_LINK&path=ABOUT#DEVICE_SERIAL_NUMBER_CELL_ID`
- ಸಾಮಾನ್ಯ → ಕುರಿತು → Bluetooth: `bridge:root=GENERAL_LINK&path=ABOUT#DEVICE_BLUETOOTH_ADDRESS_CELL_ID`
- ಸಾಮಾನ್ಯ → ಕುರಿತು → IMEI: `bridge:root=GENERAL_LINK&path=ABOUT#IMEI_CELL_ID`
- ಸಾಮಾನ್ಯ → ಕುರಿತು → ICCID: `bridge:root=GENERAL_LINK&path=ABOUT#ICCID_CELL_ID`
- ಸಾಮಾನ್ಯ → ಕುರಿತು → EID: `bridge:root=GENERAL_LINK&path=ABOUT/EID_CELL_ID`
- ಸಾಮಾನ್ಯ → ಕುರಿತು → SEID: `bridge:root=GENERAL_LINK&path=ABOUT/DEVICE_SEID_CELL_ID`
- ಸಾಮಾನ್ಯ → ಕುರಿತು → ಕಾನೂನು: `bridge:root=GENERAL_LINK&path=ABOUT/LEGAL`
- ಸಾಮಾನ್ಯ → ಕುರಿತು → Apple Watch ಬಳಕೆದಾರರ ಮಾರ್ಗದರ್ಶಿಯನ್ನು ವೀಕ್ಷಿಸಿ : `bridge:root=GENERAL_LINK&path=ABOUT#MANUAL`
- ಸಾಮಾನ್ಯ → ಸಾಫ್ಟ್‌ವೇರ್ ಅಪ್‌ಡೇಟ್: `bridge:root=GENERAL_LINK&path=SOFTWARE_UPDATE_LINK`
- ಸಾಮಾನ್ಯ → ಸ್ವಯಂಚಾಲಿತ ಆ್ಯಪ್ ಇನ್‌ಸ್ಟಾಲ್: `bridge:root=GENERAL_LINK#AUTO_APP_INSTALL_SWITCH_ID`
- ಸಾಮಾನ್ಯ → ಏರ್‌ಪ್ಲೇನ್ ಮೋಡ್: `bridge:root=GENERAL_LINK&path=AIRPLANE_MODE_ID`
- ಸಾಮಾನ್ಯ → ಫೋಕಸ್: `bridge:root=GENERAL_LINK&path=FOCUS_ID`
- ಸಾಮಾನ್ಯ → ಫೋಕಸ್ → ನನ್ನ iPhone ಮಿರರ್ ಮಾಡಿ: `bridge:root=GENERAL_LINK&path=FOCUS_ID#Mirror%20my%20iPhone`
- ಸಾಮಾನ್ಯ → ವಾಚ್ ಓರಿಯೆಂಟೇಷನ್: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION`
- ಸಾಮಾನ್ಯ → ವಾಚ್ ಓರಿಯೆಂಟೇಷನ್ → Apple Watch ಅನ್ನು ಈ ಕೈಗೆ ಧರಿಸಿ: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION#WRIST_CHOICE_ID`
- ಸಾಮಾನ್ಯ → ವಾಚ್ ಓರಿಯೆಂಟೇಷನ್ → ಎಡ ಮಣಿಕಟ್ಟು: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION#LEFT_HAND_ID`
- ಸಾಮಾನ್ಯ → ವಾಚ್ ಓರಿಯೆಂಟೇಷನ್ → ಬಲ ಮಣಿಕಟ್ಟು: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION#RIGHT_HAND_ID`
- ಸಾಮಾನ್ಯ → ವಾಚ್ ಓರಿಯೆಂಟೇಷನ್ → ಎಡ ಬದಿಯಲ್ಲಿ Digital Crown: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION#LISA_ON_LEFT_ID`
- ಸಾಮಾನ್ಯ → ವಾಚ್ ಓರಿಯೆಂಟೇಷನ್ → ಬಲ ಬದಿಯಲ್ಲಿ Digital Crown: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION#LISA_ON_RIGHT_ID`
- ಸಾಮಾನ್ಯ → Apple ಖಾತೆ: `bridge:root=GENERAL_LINK&path=LINK_WITH_ICLOUD_LINK`
- ಸಾಮಾನ್ಯ → ಡಿಕ್ಟೇಷನ್ ಸಕ್ರಿಯಗೊಳಿಸಿ: `bridge:root=GENERAL_LINK#DICTATION_CELL_ID`
- ಸಾಮಾನ್ಯ → Handoff ಸಕ್ರಿಯಗೊಳಿಸಿ: `bridge:root=GENERAL_LINK#CONTINUITY`
- ಸಾಮಾನ್ಯ → ನೈಟ್‌ಸ್ಟ್ಯಾಂಡ್ ಮೋಡ್: `bridge:root=GENERAL_LINK#NIGHTSTAND_CELL_ID`
- ಸಾಮಾನ್ಯ → ಸ್ಕ್ರೀನ್‌ಶಾಟ್‌ಗಳನ್ನು ಸಕ್ರಿಯಗೊಳಿಸಿ: `bridge:root=GENERAL_LINK#BUTTON_CHORD_CELL_ID`
- ಸಾಮಾನ್ಯ → ಕೊನೆಯದಾಗಿ ಪೂರ್ಣ ಚಾರ್ಜ್ ಆದ ನಂತರದಿಂದ ಇಲ್ಲಿಯವರೆಗಿನ ಸಮಯ | ಪವರ್ ರಿಸರ್ವ್ | ಸಂಗ್ರಹಣೆ | ಸ್ಟ್ಯಾಂಡ್‌ಬೈ: `bridge:root=GENERAL_LINK&path=USAGE_LINK`
- ಸಾಮಾನ್ಯ → ಡಯಾಗ್ನಾಸ್ಟಿಕ್ ಲಾಗ್‌ಗಳು: `bridge:root=GENERAL_LINK&path=DIAGNOSTIC_LOG_BROWSER`
- ಸಾಮಾನ್ಯ → Watch ಅನಾಲಿಟಿಕ್ಸ್ ಅನ್ನು ಕಾಪಿ ಮಾಡಿ: `bridge:root=GENERAL_LINK#LOGS_CELL_ID`
- ಸಾಮಾನ್ಯ → ರೀಸೆಟ್ ಮಾಡಿ: `bridge:root=GENERAL_LINK&path=RESET`
- ಸಾಮಾನ್ಯ → ಸಬ್‌ಮರ್ಜ್ ಆಗಿರುವಾಗ ಸ್ವಯಂ-ಲಾಂಚ್ ಮಾಡಿ: `bridge:root=GENERAL_LINK&path=AUTO_LAUNCH`
- ಸಾಮಾನ್ಯ → ಸಬ್‌ಮರ್ಜ್ ಆಗಿರುವಾಗ ಸ್ವಯಂ-ಲಾಂಚ್ ಮಾಡಿ → ಆಡಿಯೊ ಆ್ಯಪ್‌ಗಳನ್ನು ಸ್ವಯಂಚಾಲಿತವಾಗಿ ತೆರೆಯಿರಿ: `bridge:root=GENERAL_LINK&path=AUTO_LAUNCH#AUTO_LAUNCH_MEDIA`
- ಸಾಮಾನ್ಯ → ಗಡಿಯಾರಕ್ಕೆ ಹಿಂತಿರುಗಿ: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK`
- ಸಾಮಾನ್ಯ → ಗಡಿಯಾರಕ್ಕೆ ಹಿಂತಿರುಗಿ → ಗಡಿಯಾರಕ್ಕೆ ಹಿಂತಿರುಗಿ: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK#CSLPRFReturnToClockGroupID`
- ಸಾಮಾನ್ಯ → ಗಡಿಯಾರಕ್ಕೆ ಹಿಂತಿರುಗಿ → ಯಾವಾಗಲೂ: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK#RETURN_TO_CLOCK_ALWAYS`
- ಸಾಮಾನ್ಯ → ಗಡಿಯಾರಕ್ಕೆ ಹಿಂತಿರುಗಿ → 2 ನಿಮಿಷಗಳ ನಂತರ: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK#RETURN_TO_CLOCK_AFTER_2_MINUTES`
- ಸಾಮಾನ್ಯ → ಗಡಿಯಾರಕ್ಕೆ ಹಿಂತಿರುಗಿ → 1 ಗಂಟೆಯ ನಂತರ: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK#RETURN_TO_CLOCK_AFTER_1_HOUR`
- ಸಾಮಾನ್ಯ → ಗಡಿಯಾರಕ್ಕೆ ಹಿಂತಿರುಗಿ → ಆ್ಯಪ್‌ಗಳು: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK#APP_GROUP_ID`
- ಸಾಮಾನ್ಯ → ಭಾಷೆ ಮತ್ತು ಪ್ರದೇಶ: `bridge:root=GENERAL_LINK&path=LANGUAGE_AND_REGION`
- ಸಾಮಾನ್ಯ → ಭಾಷೆ ಮತ್ತು ಪ್ರದೇಶ → ನನ್ನ iPhone ಮಿರರ್ ಮಾಡಿ: `bridge:root=GENERAL_LINK&path=LANGUAGE_AND_REGION#MIRROR_MY_COMPANION_ID`
- ಸಾಮಾನ್ಯ → ಭಾಷೆ ಮತ್ತು ಪ್ರದೇಶ → ಕಸ್ಟಮ್: `bridge:root=GENERAL_LINK&path=LANGUAGE_AND_REGION#CUSTOM_ID`
- ಸಾಮಾನ್ಯ → Wake Screen: `bridge:root=GENERAL_LINK&path=WAKE_SCREEN`
- ಸಾಮಾನ್ಯ → Wake Screen → ಈಗ ಪ್ಲೇ ಆಗುತ್ತಿದೆ: `bridge:root=GENERAL_LINK&path=WAKE_SCREEN#AUTO_LAUNCH_MEDIA`
- ಸ್ಮಾರ್ಟ್ ಸ್ಟ್ಯಾಕ್: `bridge:root=SMARTSTACK_LINK`
- ಸೌಂಡ್ಸ್ & ಹ್ಯಾಪ್ಟಿಕ್ಸ್: `bridge:root=SOUNDS_ID`
- ಸೌಂಡ್ಸ್ & ಹ್ಯಾಪ್ಟಿಕ್ಸ್ → ಅಲರ್ಟ್ ವಾಲ್ಯೂಮ್: `bridge:root=SOUNDS_ID#AUDIO_SLIDER`
- ಸೌಂಡ್ಸ್ & ಹ್ಯಾಪ್ಟಿಕ್ಸ್ → ನಿಶ್ಯಬ್ದ ಮೋಡ್: `bridge:root=SOUNDS_ID#audio_mute_switch`
- ಸೌಂಡ್ಸ್ & ಹ್ಯಾಪ್ಟಿಕ್ಸ್ → ಹೆಡ್‌ಫೋನ್ ಆಡಿಯೊ: `bridge:root=SOUNDS_ID#HEADPHONE_AUDIO_GROUP`
- ಸೌಂಡ್ಸ್ & ಹ್ಯಾಪ್ಟಿಕ್ಸ್ → ಹೆಡ್‌ಫೋನ್ ಸುರಕ್ಷತೆ: `bridge:root=SOUNDS_ID&path=HEADPHONE_LEVEL_LIMIT_SETTING`
- ಸೌಂಡ್ಸ್ & ಹ್ಯಾಪ್ಟಿಕ್ಸ್ → ಹೆಡ್‌ಫೋನ್ ಸುರಕ್ಷತೆ → ಹೆಡ್‌ಫೋನ್ ನೋಟಿಫಿಕೇಷನ್‌ಗಳು: `bridge:root=SOUNDS_ID&path=HEADPHONE_LEVEL_LIMIT_SETTING#COSHeadphoneNotificationsSwitchKey`
- ಸೌಂಡ್ಸ್ & ಹ್ಯಾಪ್ಟಿಕ್ಸ್ → ಹೆಡ್‌ಫೋನ್ ಸುರಕ್ಷತೆ → ಜೋರಾದ ಸೌಂಡ್‌ಗಳನ್ನು ಕಡಿಮೆ ಮಾಡಿ: `bridge:root=SOUNDS_ID&path=HEADPHONE_LEVEL_LIMIT_SETTING#COSHeadphoneLevelLimitSwitchKey`
- ಸೌಂಡ್ಸ್ & ಹ್ಯಾಪ್ಟಿಕ್ಸ್ → ಹ್ಯಾಪ್ಟಿಕ್‌ಗಳು: `bridge:root=SOUNDS_ID#Haptics`
- ಸೌಂಡ್ಸ್ & ಹ್ಯಾಪ್ಟಿಕ್ಸ್ → ಹ್ಯಾಪ್ಟಿಕ್ ಅಲರ್ಟ್‌ಗಳು: `bridge:root=SOUNDS_ID#Haptic%20Alerts`
- ಸೌಂಡ್ಸ್ & ಹ್ಯಾಪ್ಟಿಕ್ಸ್ → ಕ್ರೌನ್ ಹ್ಯಾಪ್ಟಿಕ್‌ಗಳು: `bridge:root=SOUNDS_ID#JACKRABBIT_ID`
- ಸೌಂಡ್ಸ್ & ಹ್ಯಾಪ್ಟಿಕ್ಸ್ → ಸಿಸ್ಟಂ ಹ್ಯಾಪ್ಟಿಕ್‌ಗಳು: `bridge:root=SOUNDS_ID#SYSTEM_HAPTICS_ID`
- ಸೌಂಡ್ಸ್ & ಹ್ಯಾಪ್ಟಿಕ್ಸ್ → ಮ್ಯೂಟ್ ಮಾಡಲು ಕವರ್ ಮಾಡಿ: `bridge:root=SOUNDS_ID#COVER_TO_MUTE`
- ತುರ್ತು SOS: `bridge:root=SOS_MODE_ID`
- ಗೌಪ್ಯತೆ: `bridge:root=PRIVACY_ID`
- ಗೌಪ್ಯತೆ → ಹೃದಯ ಬಡಿತದ ದರ: `bridge:root=PRIVACY_ID#HEART_RATE_ENABLED_LABEL`
- ಗೌಪ್ಯತೆ → ಶ್ವಾಸ ಕ್ರಿಯೆಯ ದರ: `bridge:root=PRIVACY_ID#RESPIRATORY_RATE_LABEL`
- ಗೌಪ್ಯತೆ → ಫಿಟ್‌ನೆಸ್ ಟ್ರ್ಯಾಕಿಂಗ್: `bridge:root=PRIVACY_ID#FITNESS_TRACKING_ENABLED_LABEL`
- ಗೌಪ್ಯತೆ → ಫಿಟ್‌ನೆಸ್ ಕ್ಯಾಲಿಬ್ರೇಷನ್ ಡೇಟವನ್ನು ರೀಸೆಟ್ ಮಾಡಿ: `bridge:root=PRIVACY_ID#RESET_MOTION_CALIBRATION_LABEL`
- ಗೌಪ್ಯತೆ → ವಾತಾವರಣದಲ್ಲಿನ ಸೌಂಡ್ ಮಾಪನಗಳು: `bridge:root=PRIVACY_ID#ENVIRONMENTAL_AUDIO_ENABLED_SWITCH_ID`
- ಗೌಪ್ಯತೆ → ಹೆಡ್‌ಫೋನ್ ಆಡಿಯೊ ಮಾಪನಗಳು: `bridge:root=PRIVACY_ID&path=HeadphoneAudio`
- ಗೌಪ್ಯತೆ → ಹೆಡ್‌ಫೋನ್ ಆಡಿಯೊ ಮಾಪನಗಳು → ಆರೋಗ್ಯದಲ್ಲಿ ಸೇವ್ ಮಾಡಿ: `bridge:root=PRIVACY_ID&path=HeadphoneAudio#SAVE_IN_HEALTH_GROUP`
- ಗೌಪ್ಯತೆ → ಹೆಡ್‌ಫೋನ್ ಆಡಿಯೊ ಮಾಪನಗಳು → 8 ದಿನಗಳವರೆಗೆ: `bridge:root=PRIVACY_ID&path=HeadphoneAudio#FOR_EIGHT_DAYS_CELL`
- ಗೌಪ್ಯತೆ → ಹೆಡ್‌ಫೋನ್ ಆಡಿಯೊ ಮಾಪನಗಳು → ನಾನು ಡಿಲೀಟ್ ಮಾಡುವವರೆಗೆ: `bridge:root=PRIVACY_ID&path=HeadphoneAudio#UNTIL_I_DELETE_CELL`
- ಗೌಪ್ಯತೆ → ರಕ್ತದಲ್ಲಿನ ಆಮ್ಲಜನಕದ ಮಾಪನಗಳು: `bridge:root=PRIVACY_ID#OXYGEN_SATURATION_ENABLED_SWITCH_ID`
- ಗೌಪ್ಯತೆ → ಮಣಿಕಟ್ಟಿನ ತಾಪಮಾನ: `bridge:root=PRIVACY_ID#WRIST_TEMPERATURE_SWITCH_ID`
- ಸ್ಕ್ರೀನ್ ಟೈಮ್: `bridge:root=SCREEN_TIME_ID`
- Nike Run Club: `bridge:root=VICTORY_ROW_ID`
- ಗಡಿಯಾರ: `bridge:root=com.apple.NanoClockBridgeSettings`
- ಗಡಿಯಾರ → 24-ಗಂಟೆಗಳ ಸಮಯ: `bridge:root=com.apple.NanoClockBridgeSettings#24-Hour%20Time`
- ಗಡಿಯಾರ → ಚೈಮ್‌ಗಳು: `bridge:root=com.apple.NanoClockBridgeSettings#Chimes`
- ಗಡಿಯಾರ → ಸೌಂಡ್‌ಗಳು: `bridge:root=com.apple.NanoClockBridgeSettings&path=Sounds`
- ಗಡಿಯಾರ → ಸೌಂಡ್‌ಗಳು → ಬೆಲ್‌ಗಳು: `bridge:root=com.apple.NanoClockBridgeSettings&path=Sounds#Bells`
- ಗಡಿಯಾರ → ಸೌಂಡ್‌ಗಳು → ಹಕ್ಕಿಗಳು: `bridge:root=com.apple.NanoClockBridgeSettings&path=Sounds#Birds`
- ಗಡಿಯಾರ → ಸಮಯವನ್ನು ಹೇಳಿ: `bridge:root=com.apple.NanoClockBridgeSettings#Speak%20Time`
- ಗಡಿಯಾರ → ನಿಶ್ಯಬ್ದ ಮೋಡ್ ಮೂಲಕ ನಿಯಂತ್ರಿಸಿ: `bridge:root=com.apple.NanoClockBridgeSettings#Control%20With%20Silent%20Mode`
- ಗಡಿಯಾರ → ಯಾವಾಗಲೂ ಮಾತನಾಡಿ: `bridge:root=com.apple.NanoClockBridgeSettings#Always%20Speak`
- ಗಡಿಯಾರ → ಟ್ಯಾಪ್ಟಿಕ್ ಸಮಯ: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time`
- ಗಡಿಯಾರ → ಟ್ಯಾಪ್ಟಿಕ್ ಸಮಯ → ಟ್ಯಾಪ್ಟಿಕ್ ಸಮಯ: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time#Taptic%20Time`
- ಗಡಿಯಾರ → ಟ್ಯಾಪ್ಟಿಕ್ ಸಮಯ → ಡಿಜಿಟ್‌ಗಳು: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time#Digits`
- ಗಡಿಯಾರ → ಟ್ಯಾಪ್ಟಿಕ್ ಸಮಯ → ಟೆರ್ಸ್: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time#Terse`
- ಗಡಿಯಾರ → ಟ್ಯಾಪ್ಟಿಕ್ ಸಮಯ → ಮೋರ್ಸ್ ಕೋಡ್: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time#Morse%20Code`
- ಗಡಿಯಾರ → iPhoneನಿಂದ ಪುಶ್ ಅಲರ್ಟ್‌ಗಳು: `bridge:root=com.apple.NanoClockBridgeSettings#Push%20Alerts%20from%20iPhone`
- ಗಡಿಯಾರ → ನೋಟಿಫಿಕೇಷನ್‌ಗಳ ಇಂಡಿಕೇಟರ್: `bridge:root=com.apple.NanoClockBridgeSettings#Notifications%20Indicator`
- ಗಡಿಯಾರ → ಮೊನೊಗ್ರಾಂ: `bridge:root=com.apple.NanoClockBridgeSettings&path=MONOGRAM_ID`
- ಗಡಿಯಾರ → ವಾಚ್ ಫೇಸ್ ನೋಟಿಫಿಕೇಷನ್‌ಗಳು: `bridge:root=com.apple.NanoClockBridgeSettings#Watch%20Face%20Notifications`
- ಗಡಿಯಾರ → ನಗರದ ಸಂಕ್ಷೇಪಣಗಳು: `bridge:root=com.apple.NanoClockBridgeSettings&path=City%20Abbreviations`
- ಗಡಿಯಾರ → Siri ಫೇಸ್ ಡೇಟ ಸೋರ್ಸ್‌ಗಳು: `bridge:root=com.apple.NanoClockBridgeSettings&path=Siri%20Face%20Data%20Sources`
- ನಾಯ್ಸ್: `bridge:root=com.apple.Noise.settings`
- ನಾಯ್ಸ್ → ವಾತಾವರಣದಲ್ಲಿನ ಸೌಂಡ್ ಮಾಪನಗಳು: `bridge:root=com.apple.Noise.settings#ENABLE_MEASUREMENTS_ID`
- ನಾಯ್ಸ್ → ನಾಯ್ಸ್ ನೋಟಿಫಿಕೇಷನ್‌ಗಳು: `bridge:root=com.apple.Noise.settings#LOUD_NOTIFICATION_GROUP_ID`
- ನಾಯ್ಸ್ → ನಾಯ್ಸ್ ಥ್ರೆಶೋಲ್ಡ್: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID`
- ನಾಯ್ಸ್ → ನಾಯ್ಸ್ ಥ್ರೆಶೋಲ್ಡ್ → ಆಫ್: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#OFF`
- ನಾಯ್ಸ್ → ನಾಯ್ಸ್ ಥ್ರೆಶೋಲ್ಡ್ → 80 ಡೆಸಿಬೆಲ್‌ಗಳು: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_80`
- ನಾಯ್ಸ್ → ನಾಯ್ಸ್ ಥ್ರೆಶೋಲ್ಡ್ → 85 ಡೆಸಿಬೆಲ್‌ಗಳು: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_85`
- ನಾಯ್ಸ್ → ನಾಯ್ಸ್ ಥ್ರೆಶೋಲ್ಡ್ → 90 ಡೆಸಿಬೆಲ್‌ಗಳು: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_90`
- ನಾಯ್ಸ್ → ನಾಯ್ಸ್ ಥ್ರೆಶೋಲ್ಡ್ → 95 ಡೆಸಿಬೆಲ್‌ಗಳು: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_95`
- ನಾಯ್ಸ್ → ನಾಯ್ಸ್ ಥ್ರೆಶೋಲ್ಡ್ → 100 ಡೆಸಿಬೆಲ್‌ಗಳು: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_100`
- ನಾಯ್ಸ್ → ನೋಟಿಫಿಕೇಷನ್ ಗ್ರೂಪಿಂಗ್: `bridge:root=com.apple.Noise.settings&path=NOTIFICATION_COALESCING_ID`
- ಕ್ಯಾಲೆಂಡರ್: `bridge:root=com.apple.NanoCalendarBridgeSettings`
- ಕ್ಯಾಲೆಂಡರ್ → ನೋಟಿಫಿಕೇಷನ್‌ಗಳು: `bridge:root=com.apple.NanoCalendarBridgeSettings#MIRROR_RADIO_GROUP_ID`
- ಕ್ಯಾಲೆಂಡರ್ → ನನ್ನ iPhone ಮಿರರ್ ಮಾಡಿ: `bridge:root=com.apple.NanoCalendarBridgeSettings#MIRROR_MY_COMPANION_ID`
- ಕ್ಯಾಲೆಂಡರ್ → ಕಸ್ಟಮ್…: `bridge:root=com.apple.NanoCalendarBridgeSettings#CUSTOM_ID`
- ಕ್ಯಾಲೆಂಡರ್ → ಕ್ಯಾಲೆಂಡರ್‌ಗಳು: `bridge:root=com.apple.NanoCalendarBridgeSettings#CALENDARS_MIRROR_RADIO_GROUP_ID`
- ಕ್ಯಾಲೆಂಡರ್ → ನನ್ನ iPhone ಮಿರರ್ ಮಾಡಿ: `bridge:root=com.apple.NanoCalendarBridgeSettings#CALENDARS_MIRROR_MY_COMPANION_ID`
- ಕ್ಯಾಲೆಂಡರ್ → ಕಸ್ಟಮ್…: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=CALENDARS_CUSTOM_ID`
- ಕ್ಯಾಲೆಂಡರ್ → ಮುಂಬರುವ ಇವೆಂಟ್‌ಗಳು: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=Upcoming%20Events`
- ಕ್ಯಾಲೆಂಡರ್ → ಆಹ್ವಾನಗಳು: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=Invitations`
- ಕ್ಯಾಲೆಂಡರ್ → ಆಹ್ವಾನಿತರ ಪ್ರತಿಕ್ರಿಯೆಗಳು: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=Invitee%20Responses`
- ಕ್ಯಾಲೆಂಡರ್ → ಹಂಚಿಕೊಂಡ ಕ್ಯಾಲೆಂಡರ್ ಬದಲಾವಣೆಗಳು: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=Shared%20Calendar%20Alerts`
- ವಾಕಿ-ಟಾಕಿ: `bridge:root=com.apple.tincan.settings`
- ವಾಕಿ-ಟಾಕಿ → ನೋಟಿಫಿಕೇಷನ್‌ಗಳನ್ನು ಅನುಮತಿಸಿ: `bridge:root=com.apple.tincan.settings#ALLOW_NOTIFICATIONS_ID`
- ವಾಕಿ-ಟಾಕಿ → ನೋಟಿಫಿಕೇಷನ್ ಸೆಂಟರ್‌ಗೆ ಕಳುಹಿಸಿ: `bridge:root=com.apple.tincan.settings#SEND_TO_NOTIFICATION_CENTER_ID`
- ವಾಕಿ-ಟಾಕಿ → ನೋಟಿಫಿಕೇಷನ್‌ಗಳು ಆಫ್: `bridge:root=com.apple.tincan.settings#NOTIFICATIONS_OFF_ID`
- ವಾಕಿ-ಟಾಕಿ → ನೋಟಿಫಿಕೇಷನ್ ಗ್ರೂಪಿಂಗ್: `bridge:root=com.apple.tincan.settings&path=NOTIFICATION_COALESCING_ID`
- ವಾಕಿ-ಟಾಕಿ → ಸ್ನೇಹಿತರು: `bridge:root=com.apple.tincan.settings#Friends`
- Siri: `bridge:root=SIRI_WATCH_SETTINGS_ID`
- Siri → Siriಗೆ ಕೇಳಿ: `bridge:root=SIRI_WATCH_SETTINGS_ID#ASK_SIRI_GROUP_ID`
- Siri → Siri: `bridge:root=SIRI_WATCH_SETTINGS_ID#HEY_SIRI_SWITCH_ID`
- Siri → ಮಾತನಾಡಲು ಮೇಲೆತ್ತಿಕೊಳ್ಳಿ: `bridge:root=SIRI_WATCH_SETTINGS_ID#RAISE_TO_SPEAK_SWITCH_ID`
- Siri → Digital Crown ಅನ್ನು ಒತ್ತಿ: `bridge:root=SIRI_WATCH_SETTINGS_ID#DIGITAL_CROWN_SWITCH_ID`
- Siri → ವಾಯ್ಸ್ ಫೀಡ್‌ಬ್ಯಾಕ್: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_FEEDBACK_ID`
- Siri → ವಾಯ್ಸ್ ಫೀಡ್‌ಬ್ಯಾಕ್ → ಯಾವಾಗಲೂ ಆನ್: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_FEEDBACK_ID#VOICE_FEEDBACK_ALWAYS_ON_ID`
- Siri → ವಾಯ್ಸ್ ಫೀಡ್‌ಬ್ಯಾಕ್ → ನಿಶ್ಯಬ್ದ ಮೋಡ್ ಮೂಲಕ ನಿಯಂತ್ರಿಸಿ: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_FEEDBACK_ID#VOICE_FEEDBACK_CONTROL_WITH_SILENT_MODE_ID`
- Siri → ವಾಯ್ಸ್ ಫೀಡ್‌ಬ್ಯಾಕ್ → ಹೆಡ್‌ಫೋನ್‌ಗಳು ಮಾತ್ರ: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_FEEDBACK_ID#VOICE_FEEDBACK_HEADPHONES_ONLY_ID`
- Siri → ವಾಯ್ಸ್ ವಾಲ್ಯೂಮ್: `bridge:root=SIRI_WATCH_SETTINGS_ID#VOICE_VOLUME_GROUP_ID`
- Siri → Siri ಸಲಹೆಗಳು: `bridge:root=SIRI_WATCH_SETTINGS_ID#ASSISTANT_SUGGESTIONS_GROUP_ID`
- ವರ್ಕ್ಔಟ್: `bridge:root=com.apple.SessionTrackerAppSettings`
- ವರ್ಕ್ಔಟ್ → ಗುರಿಯ ಮೆಟ್ರಿಕ್ ಅನ್ನು ತೋರಿಸಿ: `bridge:root=com.apple.SessionTrackerAppSettings#PRO_SETTING_ENABLED_LABEL`
- ವರ್ಕ್ಔಟ್ → ವರ್ಕ್ಔಟ್ ವ್ಯೂ: `bridge:root=com.apple.SessionTrackerAppSettings&path=METRIC_VIEW_ID`
- ವರ್ಕ್ಔಟ್ → ಸ್ವಯಂ-ವಿರಾಮ: `bridge:root=com.apple.SessionTrackerAppSettings&path=AUTO_PAUSE_ID`
- ವರ್ಕ್ಔಟ್ → ಸ್ವಯಂ-ವಿರಾಮ → ಸ್ವಯಂ-ವಿರಾಮ: `bridge:root=com.apple.SessionTrackerAppSettings&path=AUTO_PAUSE_ID#WorkoutAutoPauseSwitch`
- ವರ್ಕ್ಔಟ್ → ವರ್ಕ್ಔಟ್ ರಿಮೈಂಡರ್ ಅನ್ನು ಪ್ರಾರಂಭಿಸಿ: `bridge:root=com.apple.SessionTrackerAppSettings#AUTO_START_WORKOUT_NOTIFICATIONS_ENABLED_LABEL`
- ವರ್ಕ್ಔಟ್ → ವರ್ಕ್ಔಟ್ ರಿಮೈಂಡರ್ ಕೊನೆಗೊಳಿಸಿ: `bridge:root=com.apple.SessionTrackerAppSettings#END_REMINDERS_ENABLED_LABEL`
- ವರ್ಕ್ಔಟ್ → ವಿರಾಮಗೊಳಿಸಲು ಒತ್ತಿರಿ: `bridge:root=com.apple.SessionTrackerAppSettings#CHORD_PRESS_PAUSE_WORKOUT_ENABLED_LABEL`
- ವರ್ಕ್ಔಟ್ → ಜಿಮ್ ಉಪಕರಣವನ್ನು ಪತ್ತೆಮಾಡಿ: `bridge:root=com.apple.SessionTrackerAppSettings#NFC_ENABLED_LABEL_ID`
- ವರ್ಕ್ಔಟ್ → ಗತಿ/ವೇಗದ ವೀಕ್ಷಣೆ: `bridge:root=com.apple.SessionTrackerAppSettings&path=PACE_VIEW_LABEL`
- ವರ್ಕ್ಔಟ್ → ಗತಿ/ವೇಗದ ವೀಕ್ಷಣೆ → ಪ್ರಸ್ತುತ: `bridge:root=com.apple.SessionTrackerAppSettings&path=PACE_VIEW_LABEL#CURRENT_PACE_ID`
- ವರ್ಕ್ಔಟ್ → ಗತಿ/ವೇಗದ ವೀಕ್ಷಣೆ → ಸರಾಸರಿ: `bridge:root=com.apple.SessionTrackerAppSettings&path=PACE_VIEW_LABEL#AVERAGE_PACE_ID`
- ವರ್ಕ್ಔಟ್ → ವರ್ಕ್ಔಟ್ ಪ್ಲೇಲಿಸ್ಟ್: `bridge:root=com.apple.SessionTrackerAppSettings&path=MUSIC_AUTOSTART_TITLE_ID`
- ವರ್ಕ್ಔಟ್ → ವರ್ಕ್ಔಟ್ ಪ್ಲೇಲಿಸ್ಟ್ → ಯಾವುದೂ ಅಲ್ಲ: `bridge:root=com.apple.SessionTrackerAppSettings&path=MUSIC_AUTOSTART_TITLE_ID#NONE_AUTOSTART_ID`
- ವರ್ಕ್ಔಟ್ → ವರ್ಕ್ಔಟ್ ಪ್ಲೇಲಿಸ್ಟ್ → ಪ್ಲೇಲಿಸ್ಟ್‌ಗಳು: `bridge:root=com.apple.SessionTrackerAppSettings&path=MUSIC_AUTOSTART_TITLE_ID#MUSIC_PLAYLIST_GROUP_ID`
- ವರ್ಕ್ಔಟ್ → ಪ್ರಾರಂಭದಿಂದ ಪ್ಲೇ ಮಾಡಿ: `bridge:root=com.apple.SessionTrackerAppSettings#WORKOUT_MUSIC_PLAY_FROM_BEGINNING_SETTING_ID`
- ವರ್ಕ್ಔಟ್ → ಶಫಲ್ ಮಾಡಿ: `bridge:root=com.apple.SessionTrackerAppSettings#WORKOUT_MUSIC_SHUFFLE_SETTING_ID`
- ವರ್ಕ್ಔಟ್ → ಮಾಪನದ ಯೂನಿಟ್‌ಗಳು: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID`
- ವರ್ಕ್ಔಟ್ → ಮಾಪನದ ಯೂನಿಟ್‌ಗಳು → ಕ್ಯಾಲರಿಗಳು: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#ENERGY_UNITS_CALORIES_ID`
- ವರ್ಕ್ಔಟ್ → ಮಾಪನದ ಯೂನಿಟ್‌ಗಳು → ಕಿಲೋಕ್ಯಾಲರಿಗಳು: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#ENERGY_UNITS_KILOCALORIES_ID`
- ವರ್ಕ್ಔಟ್ → ಮಾಪನದ ಯೂನಿಟ್‌ಗಳು → ಕಿಲೋಜೂಲ್‌ಗಳು: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#ENERGY_UNITS_KILOJOULES_ID`
- ವರ್ಕ್ಔಟ್ → ಮಾಪನದ ಯೂನಿಟ್‌ಗಳು → ಯಾರ್ಡ್‌ಗಳು: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#POOL_LENGTH_YARDS_ID`
- ವರ್ಕ್ಔಟ್ → ಮಾಪನದ ಯೂನಿಟ್‌ಗಳು → ಮೀಟರ್‌ಗಳು: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#POOL_LENGTH_METERS_ID`
- ವರ್ಕ್ಔಟ್ → ಮಾಪನದ ಯೂನಿಟ್‌ಗಳು → ಮೈಲುಗಳು: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#CYCLING_WORKOUTS_MILES_ID`
- ವರ್ಕ್ಔಟ್ → ಮಾಪನದ ಯೂನಿಟ್‌ಗಳು → ಕಿಲೋಮೀಟರ್‌ಗಳು: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#CYCLING_WORKOUTS_KILOMETERS_ID`
- ವರ್ಕ್ಔಟ್ → ಮಾಪನದ ಯೂನಿಟ್‌ಗಳು → ಮೈಲುಗಳು: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#WALKING_AND_RUNNING_WORKOUTS_MILES_ID`
- ವರ್ಕ್ಔಟ್ → ಮಾಪನದ ಯೂನಿಟ್‌ಗಳು → ಕಿಲೋಮೀಟರ್‌ಗಳು: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#WALKING_AND_RUNNING_WORKOUTS_KILOMETERS_ID`
- ವರ್ಕ್ಔಟ್ → ವಾಯ್ಸ್ ಫೀಡ್‌ಬ್ಯಾಕ್: `bridge:root=com.apple.SessionTrackerAppSettings#WORKOUT_VOICE_FEEDBACK_LABEL`
- ವರ್ಕ್ಔಟ್ → ನಡೆದಾಡುವ ಸಮಯ: `bridge:root=com.apple.SessionTrackerAppSettings#GUIDED_WORKOUT_PREFETCH_FOOTER_ID`
- ವರ್ಕ್ಔಟ್ → Watchನಲ್ಲಿ ಹೊಸ ವರ್ಕ್ಔಟ್‌ಗಳನ್ನು ಸೇರಿಸಿ: `bridge:root=com.apple.SessionTrackerAppSettings#GUIDED_WORKOUT_PREFETCH_LABEL_ID`
- ವರ್ಕ್ಔಟ್ → ಕಡಿಮೆ ಪವರ್ ಮೋಡ್: `bridge:root=com.apple.SessionTrackerAppSettings#LOW_POWER_MODE`
- ಸಂದೇಶ: `bridge:root=com.apple.MessagesBridgeSettings`
- ಸಂದೇಶ → ನನ್ನ iPhone ಮಿರರ್ ಮಾಡಿ: `bridge:root=com.apple.MessagesBridgeSettings#MIRROR_MY_COMPANION_ID`
- ಸಂದೇಶ → ಕಸ್ಟಮ್: `bridge:root=com.apple.MessagesBridgeSettings#CUSTOM_ID`
- ಸಂದೇಶ → ಡಿಫಾಲ್ಟ್ ಪ್ರತ್ಯುತ್ತರಗಳು: `bridge:root=com.apple.MessagesBridgeSettings&path=DEFAULT_REPLIES`
- ಸಂದೇಶ → ಡಿಫಾಲ್ಟ್ ಪ್ರತ್ಯುತ್ತರಗಳು → ಡಿಫಾಲ್ಟ್ ಪ್ರತ್ಯುತ್ತರಗಳು: `bridge:root=com.apple.MessagesBridgeSettings&path=DEFAULT_REPLIES#Default%20Replies`
- ಸಂದೇಶ → ಡಿಫಾಲ್ಟ್ ಪ್ರತ್ಯುತ್ತರಗಳು → ಸ್ಮಾರ್ಟ್ ಪ್ರತಿಕ್ರಿಯೆಗಳು: `bridge:root=com.apple.MessagesBridgeSettings&path=DEFAULT_REPLIES#Smart%20Replies`
- ಸಂದೇಶ → ಡಿಫಾಲ್ಟ್ ಪ್ರತ್ಯುತ್ತರಗಳು → ಪ್ರತ್ಯುತ್ತರ ಸೇರಿಸಿ…: `bridge:root=com.apple.MessagesBridgeSettings&path=DEFAULT_REPLIES#Add%20reply%E2%80%A6`
- ಸಂದೇಶ → ಅಲರ್ಟ್‌ಗಳನ್ನು ಪುನರಾವರ್ತಿಸಿ: `bridge:root=com.apple.MessagesBridgeSettings&path=PLAY_ALERT_TONE`
- ಸಂದೇಶ → ಆಡಿಯೊ ಸಂದೇಶಗಳು: `bridge:root=com.apple.MessagesBridgeSettings&path=AudioMessagesMode`
- iPhoneನಿಂದ ಅನ್‌ಲಾಕ್ ಮಾಡಿ | ಡೇಟ ಅಳಿಸಿ | ಪಾಸ್‌ಕೋಡ್ | ಪಾಸ್‌ಕೋಡ್ ಅನ್ನು ಆನ್ ಮಾಡಿ | ಪಾಸ್‌ಕೋಡ್ ಅನ್ನು ಆಫ್ ಮಾಡಿ | ಪಾಸ್‌ಕೋಡ್ ಬದಲಾಯಿಸಿ | ಮಣಿಕಟ್ಟು ಪತ್ತೆಹಚ್ಚುವಿಕೆ | ಸರಳವಾದ ಪಾಸ್‌ಕೋಡ್: `bridge:root=PASSCODE_ID`
- iPhoneನಿಂದ ಅನ್‌ಲಾಕ್ ಮಾಡಿ | ಡೇಟ ಅಳಿಸಿ | ಪಾಸ್‌ಕೋಡ್ | ಪಾಸ್‌ಕೋಡ್ ಅನ್ನು ಆನ್ ಮಾಡಿ | ಪಾಸ್‌ಕೋಡ್ ಅನ್ನು ಆಫ್ ಮಾಡಿ | ಪಾಸ್‌ಕೋಡ್ ಬದಲಾಯಿಸಿ | ಮಣಿಕಟ್ಟು ಪತ್ತೆಹಚ್ಚುವಿಕೆ | ಸರಳವಾದ ಪಾಸ್‌ಕೋಡ್ → ಪಾಸ್‌ಕೋಡ್ ಅನ್ನು ಆನ್ ಮಾಡಿ: `bridge:root=PASSCODE_ID#TOGGLE_PASSCODE_ID`
- iPhoneನಿಂದ ಅನ್‌ಲಾಕ್ ಮಾಡಿ | ಡೇಟ ಅಳಿಸಿ | ಪಾಸ್‌ಕೋಡ್ | ಪಾಸ್‌ಕೋಡ್ ಅನ್ನು ಆನ್ ಮಾಡಿ | ಪಾಸ್‌ಕೋಡ್ ಅನ್ನು ಆಫ್ ಮಾಡಿ | ಪಾಸ್‌ಕೋಡ್ ಬದಲಾಯಿಸಿ | ಮಣಿಕಟ್ಟು ಪತ್ತೆಹಚ್ಚುವಿಕೆ | ಸರಳವಾದ ಪಾಸ್‌ಕೋಡ್ → ಪಾಸ್‌ಕೋಡ್ ಬದಲಾಯಿಸಿ: `bridge:root=PASSCODE_ID#CHANGE_PASSCODE_ID`
- iPhoneನಿಂದ ಅನ್‌ಲಾಕ್ ಮಾಡಿ | ಡೇಟ ಅಳಿಸಿ | ಪಾಸ್‌ಕೋಡ್ | ಪಾಸ್‌ಕೋಡ್ ಅನ್ನು ಆನ್ ಮಾಡಿ | ಪಾಸ್‌ಕೋಡ್ ಅನ್ನು ಆಫ್ ಮಾಡಿ | ಪಾಸ್‌ಕೋಡ್ ಬದಲಾಯಿಸಿ | ಮಣಿಕಟ್ಟು ಪತ್ತೆಹಚ್ಚುವಿಕೆ | ಸರಳವಾದ ಪಾಸ್‌ಕೋಡ್ → ಸರಳವಾದ ಪಾಸ್‌ಕೋಡ್: `bridge:root=PASSCODE_ID#SIMPLE_PASSCODE_SWITCH_ID`
- iPhoneನಿಂದ ಅನ್‌ಲಾಕ್ ಮಾಡಿ | ಡೇಟ ಅಳಿಸಿ | ಪಾಸ್‌ಕೋಡ್ | ಪಾಸ್‌ಕೋಡ್ ಅನ್ನು ಆನ್ ಮಾಡಿ | ಪಾಸ್‌ಕೋಡ್ ಅನ್ನು ಆಫ್ ಮಾಡಿ | ಪಾಸ್‌ಕೋಡ್ ಬದಲಾಯಿಸಿ | ಮಣಿಕಟ್ಟು ಪತ್ತೆಹಚ್ಚುವಿಕೆ | ಸರಳವಾದ ಪಾಸ್‌ಕೋಡ್ → iPhoneನಿಂದ ಅನ್‌ಲಾಕ್ ಮಾಡಿ: `bridge:root=PASSCODE_ID#AUTO_UNLOCK_SWITCH_ID`
- iPhoneನಿಂದ ಅನ್‌ಲಾಕ್ ಮಾಡಿ | ಡೇಟ ಅಳಿಸಿ | ಪಾಸ್‌ಕೋಡ್ | ಪಾಸ್‌ಕೋಡ್ ಅನ್ನು ಆನ್ ಮಾಡಿ | ಪಾಸ್‌ಕೋಡ್ ಅನ್ನು ಆಫ್ ಮಾಡಿ | ಪಾಸ್‌ಕೋಡ್ ಬದಲಾಯಿಸಿ | ಮಣಿಕಟ್ಟು ಪತ್ತೆಹಚ್ಚುವಿಕೆ | ಸರಳವಾದ ಪಾಸ್‌ಕೋಡ್ → ಡೇಟ ಅಳಿಸಿ: `bridge:root=PASSCODE_ID#ERASE_DATA_SWITCH_ID`
- iPhoneನಿಂದ ಅನ್‌ಲಾಕ್ ಮಾಡಿ | ಡೇಟ ಅಳಿಸಿ | ಪಾಸ್‌ಕೋಡ್ | ಪಾಸ್‌ಕೋಡ್ ಅನ್ನು ಆನ್ ಮಾಡಿ | ಪಾಸ್‌ಕೋಡ್ ಅನ್ನು ಆಫ್ ಮಾಡಿ | ಪಾಸ್‌ಕೋಡ್ ಬದಲಾಯಿಸಿ | ಮಣಿಕಟ್ಟು ಪತ್ತೆಹಚ್ಚುವಿಕೆ | ಸರಳವಾದ ಪಾಸ್‌ಕೋಡ್ → ಮಣಿಕಟ್ಟು ಪತ್ತೆಹಚ್ಚುವಿಕೆ: `bridge:root=PASSCODE_ID#WRIST_DETECTION_CELL_ID`
- Mail: `bridge:root=com.apple.NanoMailBridgeSettings`
- Mail → ನನ್ನ iPhone ಮಿರರ್ ಮಾಡಿ: `bridge:root=com.apple.NanoMailBridgeSettings#MIRROR_MY_COMPANION_ID`
- Mail → ಕಸ್ಟಮ್: `bridge:root=com.apple.NanoMailBridgeSettings#CUSTOM_ID`
- Mail → Mail ಸೆಟ್ಟಿಂಗ್ಸ್: `bridge:root=com.apple.NanoMailBridgeSettings#Mail%20Settings`
- Mail → ಖಾತೆಗಳು: `bridge:root=com.apple.NanoMailBridgeSettings&path=Accounts`
- Mail → Mail ಅನ್ನು ಸೇರಿಸಿ: `bridge:root=com.apple.NanoMailBridgeSettings&path=Include%20Mail`
- Mail → ಸಂದೇಶದ ಪ್ರಿವ್ಯೂ: `bridge:root=com.apple.NanoMailBridgeSettings&path=Message%20Preview`
- Mail → ಸಂದೇಶದ ಪ್ರಿವ್ಯೂ → ಯಾವುದೂ ಅಲ್ಲ: `bridge:root=com.apple.NanoMailBridgeSettings&path=Message%20Preview#0`
- Mail → ಸಂದೇಶದ ಪ್ರಿವ್ಯೂ → 1 ಸಾಲು: `bridge:root=com.apple.NanoMailBridgeSettings&path=Message%20Preview#1`
- Mail → ಸಂದೇಶದ ಪ್ರಿವ್ಯೂ → 2 ಸಾಲುಗಳು: `bridge:root=com.apple.NanoMailBridgeSettings&path=Message%20Preview#2`
- Mail → ಡಿಫಾಲ್ಟ್ ಪ್ರತ್ಯುತ್ತರಗಳು: `bridge:root=com.apple.NanoMailBridgeSettings&path=Default%20Replies`
- Mail → ಡಿಫಾಲ್ಟ್ ಪ್ರತ್ಯುತ್ತರಗಳು → ಡಿಫಾಲ್ಟ್ ಪ್ರತ್ಯುತ್ತರಗಳು: `bridge:root=com.apple.NanoMailBridgeSettings&path=Default%20Replies#Default%20Replies`
- Mail → ಡಿಫಾಲ್ಟ್ ಪ್ರತ್ಯುತ್ತರಗಳು → ಪ್ರತ್ಯುತ್ತರ ಸೇರಿಸಿ…: `bridge:root=com.apple.NanoMailBridgeSettings&path=Default%20Replies#Add%20reply%E2%80%A6`
- Mail → ಸಹಿ: `bridge:root=com.apple.NanoMailBridgeSettings&path=Signature`
- Siri ಕಾರ್ಡ್ ಆರಿಸಿದ ಸ್ಟಾಕ್ | ಪಾಯಿಂಟ್‌ಗಳಲ್ಲಿನ ಬದಲಾವಣೆ | ಪ್ರಸ್ತುತ ದರ | ಮಾರ್ಕೆಟ್ ಕ್ಯಾಪ್ | ಶೇಕಡಾವಾರು ಬದಲಾವಣೆ | ಸ್ಟಾಕ್ಸ್: `bridge:root=com.apple.StocksBridgeSettings`
- Siri ಕಾರ್ಡ್ ಆರಿಸಿದ ಸ್ಟಾಕ್ | ಪಾಯಿಂಟ್‌ಗಳಲ್ಲಿನ ಬದಲಾವಣೆ | ಪ್ರಸ್ತುತ ದರ | ಮಾರ್ಕೆಟ್ ಕ್ಯಾಪ್ | ಶೇಕಡಾವಾರು ಬದಲಾವಣೆ | ಸ್ಟಾಕ್ಸ್ → ಕ್ಲಾಕ್ ಫೇಸ್ ಈ ಕಾಂಪ್ಲಿಕೇಷನ್‌ಗಳನ್ನು ತೋರಿಸುತ್ತದೆ: `bridge:root=com.apple.StocksBridgeSettings#Clock%20Face%20Complication%20Shows`
- Siri ಕಾರ್ಡ್ ಆರಿಸಿದ ಸ್ಟಾಕ್ | ಪಾಯಿಂಟ್‌ಗಳಲ್ಲಿನ ಬದಲಾವಣೆ | ಪ್ರಸ್ತುತ ದರ | ಮಾರ್ಕೆಟ್ ಕ್ಯಾಪ್ | ಶೇಕಡಾವಾರು ಬದಲಾವಣೆ | ಸ್ಟಾಕ್ಸ್ → ಪ್ರಸ್ತುತ ದರ: `bridge:root=com.apple.StocksBridgeSettings#Current%20Price`
- Siri ಕಾರ್ಡ್ ಆರಿಸಿದ ಸ್ಟಾಕ್ | ಪಾಯಿಂಟ್‌ಗಳಲ್ಲಿನ ಬದಲಾವಣೆ | ಪ್ರಸ್ತುತ ದರ | ಮಾರ್ಕೆಟ್ ಕ್ಯಾಪ್ | ಶೇಕಡಾವಾರು ಬದಲಾವಣೆ | ಸ್ಟಾಕ್ಸ್ → ಪಾಯಿಂಟ್‌ಗಳಲ್ಲಿನ ಬದಲಾವಣೆ: `bridge:root=com.apple.StocksBridgeSettings#Points%20Change`
- Siri ಕಾರ್ಡ್ ಆರಿಸಿದ ಸ್ಟಾಕ್ | ಪಾಯಿಂಟ್‌ಗಳಲ್ಲಿನ ಬದಲಾವಣೆ | ಪ್ರಸ್ತುತ ದರ | ಮಾರ್ಕೆಟ್ ಕ್ಯಾಪ್ | ಶೇಕಡಾವಾರು ಬದಲಾವಣೆ | ಸ್ಟಾಕ್ಸ್ → ಶೇಕಡಾವಾರು ಬದಲಾವಣೆ: `bridge:root=com.apple.StocksBridgeSettings#Percentage%20Change`
- Siri ಕಾರ್ಡ್ ಆರಿಸಿದ ಸ್ಟಾಕ್ | ಪಾಯಿಂಟ್‌ಗಳಲ್ಲಿನ ಬದಲಾವಣೆ | ಪ್ರಸ್ತುತ ದರ | ಮಾರ್ಕೆಟ್ ಕ್ಯಾಪ್ | ಶೇಕಡಾವಾರು ಬದಲಾವಣೆ | ಸ್ಟಾಕ್ಸ್ → ಮಾರ್ಕೆಟ್ ಕ್ಯಾಪ್: `bridge:root=com.apple.StocksBridgeSettings#Market%20Cap`
- Siri ಕಾರ್ಡ್ ಆರಿಸಿದ ಸ್ಟಾಕ್ | ಪಾಯಿಂಟ್‌ಗಳಲ್ಲಿನ ಬದಲಾವಣೆ | ಪ್ರಸ್ತುತ ದರ | ಮಾರ್ಕೆಟ್ ಕ್ಯಾಪ್ | ಶೇಕಡಾವಾರು ಬದಲಾವಣೆ | ಸ್ಟಾಕ್ಸ್ → Siri ಫೇಸ್ ಇದಕ್ಕಾಗಿ ಕೋಟ್‌ಗಳನ್ನು ತೋರಿಸುತ್ತದೆ: `bridge:root=com.apple.StocksBridgeSettings#Siri%20Face%20Shows%20Quote%20For`
- Siri ಕಾರ್ಡ್ ಆರಿಸಿದ ಸ್ಟಾಕ್ | ಪಾಯಿಂಟ್‌ಗಳಲ್ಲಿನ ಬದಲಾವಣೆ | ಪ್ರಸ್ತುತ ದರ | ಮಾರ್ಕೆಟ್ ಕ್ಯಾಪ್ | ಶೇಕಡಾವಾರು ಬದಲಾವಣೆ | ಸ್ಟಾಕ್ಸ್ → ಆಯ್ಕೆಮಾಡಿದ ಸ್ಟಾಕ್: `bridge:root=com.apple.StocksBridgeSettings&path=Selected%20Stock`
- Siri ಕಾರ್ಡ್ ಆರಿಸಿದ ಸ್ಟಾಕ್ | ಪಾಯಿಂಟ್‌ಗಳಲ್ಲಿನ ಬದಲಾವಣೆ | ಪ್ರಸ್ತುತ ದರ | ಮಾರ್ಕೆಟ್ ಕ್ಯಾಪ್ | ಶೇಕಡಾವಾರು ಬದಲಾವಣೆ | ಸ್ಟಾಕ್ಸ್ → ಆಯ್ಕೆಮಾಡಿದ ಸ್ಟಾಕ್ → ಆಯ್ಕೆಮಾಡಿದ ಸ್ಟಾಕ್: `bridge:root=com.apple.StocksBridgeSettings&path=Selected%20Stock#Selected%20Stock`
- ಚಟುವಟಿಕೆ: `bridge:root=com.apple.HealthAppsSettings`
- ಚಟುವಟಿಕೆ → ಪ್ರಗತಿ ಅಪ್‌ಡೇಟ್‌ಗಳು: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL`
- ಚಟುವಟಿಕೆ → ಪ್ರಗತಿ ಅಪ್‌ಡೇಟ್‌ಗಳು → ಯಾವುದೂ ಅಲ್ಲ: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#ZERO_HOURS_ID`
- ಚಟುವಟಿಕೆ → ಪ್ರಗತಿ ಅಪ್‌ಡೇಟ್‌ಗಳು → ಪ್ರತಿ 2 ಗಂಟೆಗಳಿಗೊಮ್ಮೆ: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#TWO_HOURS_ID`
- ಚಟುವಟಿಕೆ → ಪ್ರಗತಿ ಅಪ್‌ಡೇಟ್‌ಗಳು → ಪ್ರತಿ 4 ಗಂಟೆಗಳಿಗೊಮ್ಮೆ: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#FOUR_HOURS_ID`
- ಚಟುವಟಿಕೆ → ಪ್ರಗತಿ ಅಪ್‌ಡೇಟ್‌ಗಳು → ಪ್ರತಿ 6 ಗಂಟೆಗಳಿಗೊಮ್ಮೆ: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#SIX_HOURS_ID`
- ಚಟುವಟಿಕೆ → ಪ್ರಗತಿ ಅಪ್‌ಡೇಟ್‌ಗಳು → ಪ್ರತಿ 8 ಗಂಟೆಗಳಿಗೊಮ್ಮೆ: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#EIGHT_HOURS_ID`
- ಚಟುವಟಿಕೆ → ಸಾಧನೆಗಳು: `bridge:root=com.apple.HealthAppsSettings#ACHIEVEMENTS_ENABLED_LABEL`
- ಚಟುವಟಿಕೆ → ವಾರದ ಸಾರಾಂಶ: `bridge:root=com.apple.HealthAppsSettings#WEEKLY_SUMMARY_ENABLED_LABEL`
- ಚಟುವಟಿಕೆ → ದೈನಂದಿನ ಕೋಚಿಂಗ್: `bridge:root=com.apple.HealthAppsSettings#DAILY_PROGRESS_ENABLED_LABEL`
- ಚಟುವಟಿಕೆ → ಗುರಿ ತಲುಪುವಿಕೆಗಳು: `bridge:root=com.apple.HealthAppsSettings#GOAL_COMPLETIONS_ENABLED_LABEL`
- ಚಟುವಟಿಕೆ → ವಿಶೇಷ ಸವಾಲುಗಳು: `bridge:root=com.apple.HealthAppsSettings#REMOTE_ACHIEVEMENTS_ENABLED_LABEL`
- ಚಟುವಟಿಕೆ → ಚಟುವಟಿಕೆ ಹಂಚಿಕೊಳ್ಳುವಿಕೆಯ ನೋಟಿಫಿಕೇಷನ್‌ಗಳು: `bridge:root=com.apple.HealthAppsSettings#ACTIVITY_SHARING_NOTIFICATIONS_ENABLED`
- ಹವಾಮಾನ: `bridge:root=com.apple.weatherbridgesettings`
- ಹವಾಮಾನ → ಡಿಫಾಲ್ಟ್ ನಗರ: `bridge:root=com.apple.weatherbridgesettings&path=Default%20City`
- ಹವಾಮಾನ → ಡಿಫಾಲ್ಟ್ ನಗರ → ಡಿಫಾಲ್ಟ್ ನಗರ: `bridge:root=com.apple.weatherbridgesettings&path=Default%20City#Default%20City`
- ಹವಾಮಾನ → ಡಿಫಾಲ್ಟ್ ನಗರ → ಪ್ರಸ್ತುತ ಸ್ಥಳ: `bridge:root=com.apple.weatherbridgesettings&path=Default%20City#Current%20Location`
- ಸಂಪರ್ಕ: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired`
- ಸಂಪರ್ಕ → ವಿಂಗಡಿಸುವ ಕ್ರಮ: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=contactsSortOrder`
- ಸಂಪರ್ಕ → ವಿಂಗಡಿಸುವ ಕ್ರಮ → ಮೊದಲ, ಕೊನೆಯ: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=contactsSortOrder#0`
- ಸಂಪರ್ಕ → ವಿಂಗಡಿಸುವ ಕ್ರಮ → ಕೊನೆಯ, ಮೊದಲ: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=contactsSortOrder#1`
- ಸಂಪರ್ಕ → ಡಿಸ್‌ಪ್ಲೇ ಕ್ರಮ: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=NSPersonNameDefaultDisplayNameOrder`
- ಸಂಪರ್ಕ → ಡಿಸ್‌ಪ್ಲೇ ಕ್ರಮ → ಮೊದಲ, ಕೊನೆಯ: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=NSPersonNameDefaultDisplayNameOrder#1`
- ಸಂಪರ್ಕ → ಡಿಸ್‌ಪ್ಲೇ ಕ್ರಮ → ಕೊನೆಯ, ಮೊದಲ: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=NSPersonNameDefaultDisplayNameOrder#2`
- ಸಂಪರ್ಕ → ಕಿರು ಹೆಸರು: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName`
- ಸಂಪರ್ಕ → ಕಿರು ಹೆಸರು → ಕಿರು ಹೆಸರು: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#Short%20Name`
- ಸಂಪರ್ಕ → ಕಿರು ಹೆಸರು → ಮೊದಲ ಹೆಸರು ಮತ್ತು ಕೊನೆ ಅಕ್ಷರ: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#First%20Name%20&%20Last%20Initial`
- ಸಂಪರ್ಕ → ಕಿರು ಹೆಸರು → ಮೊದಲ ಅಕ್ಷರ ಮತ್ತು ಕೊನೆ ಹೆಸರು: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#First%20Initial%20&%20Last%20Name`
- ಸಂಪರ್ಕ → ಕಿರು ಹೆಸರು → ಮೊದಲ ಹೆಸರು ಮಾತ್ರ: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#First%20Name%20Only`
- ಸಂಪರ್ಕ → ಕಿರು ಹೆಸರು → ಕೊನೆ ಹೆಸರು ಮಾತ್ರ: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#Last%20Name%20Only`
- ಸಂಪರ್ಕ → ಕಿರು ಹೆಸರು → ಅಡ್ಡಹೆಸರುಗಳಿಗೆ ಆದ್ಯತೆ ನೀಡಿ: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#Prefer%20Nicknames`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ: `bridge:root=ACCESSIBILITY`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ದೃಶ್ಯ: `bridge:root=ACCESSIBILITY#VISION`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → VoiceOver: `bridge:root=ACCESSIBILITY&path=VOICEOVER_TITLE`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಝೂಮ್ ಮಾಡಿ: `bridge:root=ACCESSIBILITY&path=ZOOM_TITLE`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಬೋಲ್ಡ್ ಪಠ್ಯ: `bridge:root=ACCESSIBILITY#BoldTextEnabled`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಲೇಬಲ್‌ಗಳನ್ನು ಆನ್/ಆಫ್ ಮಾಡಿ: `bridge:root=ACCESSIBILITY#OnOffLabelsEnabled`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಗ್ರೇಸ್ಕೇಲ್: `bridge:root=ACCESSIBILITY#GrayscaleDisplay`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಪಾರದರ್ಶಕತೆ ಕಡಿಮೆ ಮಾಡಿ: `bridge:root=ACCESSIBILITY#REDUCE_TRANSPARENCY`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಚಲನೆಯನ್ನು ಕಡಿಮೆ ಮಾಡಿ: `bridge:root=ACCESSIBILITY&path=ReduceMotion`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಚೈಮ್‌ಗಳು: `bridge:root=ACCESSIBILITY&path=TapticChimesCell`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಚೈಮ್‌ಗಳು → ಚೈಮ್‌ಗಳು: `bridge:root=ACCESSIBILITY&path=TapticChimesCell#Chimes`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಚೈಮ್‌ಗಳು → ನಿಗದಿಪಡಿಸಿ: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Schedule`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಚೈಮ್‌ಗಳು → ನಿಗದಿಪಡಿಸಿ → ಪ್ರತಿ ಗಂಟೆ: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Schedule#Hourly`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಚೈಮ್‌ಗಳು → ನಿಗದಿಪಡಿಸಿ → 30 ನಿಮಿಷಗಳು: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Schedule#30%20minutes`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಚೈಮ್‌ಗಳು → ನಿಗದಿಪಡಿಸಿ → 15 ನಿಮಿಷಗಳು: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Schedule#15%20minutes`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಚೈಮ್‌ಗಳು → ಸೌಂಡ್‌ಗಳು: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Sounds`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಚೈಮ್‌ಗಳು → ಸೌಂಡ್‌ಗಳು → ಬೆಲ್‌ಗಳು: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Sounds#Bells`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಚೈಮ್‌ಗಳು → ಸೌಂಡ್‌ಗಳು → ಹಕ್ಕಿಗಳು: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Sounds#Birds`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಮೋಟಾರ್: `bridge:root=ACCESSIBILITY#MotorGroupCell`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಸೈಡ್ ಬಟನ್ ಕ್ಲಿಕ್ ವೇಗ: `bridge:root=ACCESSIBILITY&path=SideButton`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಸೈಡ್ ಬಟನ್ ಕ್ಲಿಕ್ ವೇಗ → ಕ್ಲಿಕ್ ವೇಗ: `bridge:root=ACCESSIBILITY&path=SideButton#SIDE_SPEED_HEADER`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಸೈಡ್ ಬಟನ್ ಕ್ಲಿಕ್ ವೇಗ → ಡಿಫಾಲ್ಟ್: `bridge:root=ACCESSIBILITY&path=SideButton#SIDE_CLICK_SPEED_DEFAULT`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಸೈಡ್ ಬಟನ್ ಕ್ಲಿಕ್ ವೇಗ → ನಿಧಾನ: `bridge:root=ACCESSIBILITY&path=SideButton#SIDE_CLICK_SPEED_SLOW`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಸೈಡ್ ಬಟನ್ ಕ್ಲಿಕ್ ವೇಗ → ತುಂಬಾ ನಿಧಾನ: `bridge:root=ACCESSIBILITY&path=SideButton#SIDE_CLICK_SPEED_SLOWEST`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಟಚ್ ಸೌಕರ್ಯಗಳು: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಟಚ್ ಸೌಕರ್ಯಗಳು → ಟಚ್ ಸೌಕರ್ಯಗಳು: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#TOUCH_ACCOMMODATIONS_SWITCHER`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಟಚ್ ಸೌಕರ್ಯಗಳು → ಒತ್ತಿ ಹಿಡಿದುಕೊಳ್ಳುವ ಕಾಲಾವಧಿ: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#HoldDurationGroup`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಟಚ್ ಸೌಕರ್ಯಗಳು → ಒತ್ತಿ ಹಿಡಿದುಕೊಳ್ಳುವ ಕಾಲಾವಧಿ: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#HoldDuration`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಟಚ್ ಸೌಕರ್ಯಗಳು → ಪುನರಾವರ್ತನೆಯನ್ನು ನಿರ್ಲಕ್ಷಿಸಿ: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#IgnoreRepeatGroup`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಟಚ್ ಸೌಕರ್ಯಗಳು → ಪುನರಾವರ್ತನೆಯನ್ನು ನಿರ್ಲಕ್ಷಿಸಿ: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#IgnoreRepeat`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಟಚ್ ಸೌಕರ್ಯಗಳು → ಟ್ಯಾಪ್ ಸಹಾಯ: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#Tap%20Assistance`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಟಚ್ ಸೌಕರ್ಯಗಳು → ಆಫ್: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#OFF`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಟಚ್ ಸೌಕರ್ಯಗಳು → ಪ್ರಾರಂಭಿಕ ಟಚ್ ಸ್ಥಳವನ್ನು ಬಳಸಿ: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#ACTIVATE_ON_TOUCH`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಟಚ್ ಸೌಕರ್ಯಗಳು → ಅಂತಿಮ ಟಚ್ ಸ್ಥಳವನ್ನು ಬಳಸಿ: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#ACTIVATE_ON_RELEASE`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ವೀಲ್‌ಚೇರ್ ಚಟುವಟಿಕೆ: `bridge:root=ACCESSIBILITY#MOBILITY`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ವಾಕಿ-ಟಾಕಿ: `bridge:root=ACCESSIBILITY#WalkieTalkieTapToTalkGroup`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಮಾತನಾಡಲು ಟ್ಯಾಪ್ ಮಾಡಿ: `bridge:root=ACCESSIBILITY#WalkieTalkieTapToTalk`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಆಲಿಸುವಿಕೆ: `bridge:root=ACCESSIBILITY#HEARING`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → RTT: `bridge:root=ACCESSIBILITY&path=RTT`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → RTT → RTT: `bridge:root=ACCESSIBILITY&path=RTT#RTT_TITLE`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → RTT → ರಿಲೇ ಸಂಖ್ಯೆ: `bridge:root=ACCESSIBILITY&path=RTT/TTY_RELAY_LABEL`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → RTT → ಕೂಡಲೇ ಕಳುಹಿಸಿ: `bridge:root=ACCESSIBILITY&path=RTT#TTY_REALTIME_LABEL`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → RTT → ಡಿಫಾಲ್ಟ್ ಪ್ರತ್ಯುತ್ತರಗಳು: `bridge:root=ACCESSIBILITY&path=RTT/RTT_CANNED_TEXT_TITLE`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → RTT → ಡಿಫಾಲ್ಟ್ ಪ್ರತ್ಯುತ್ತರಗಳು → ಡಿಫಾಲ್ಟ್ ಪ್ರತ್ಯುತ್ತರಗಳು: `bridge:root=ACCESSIBILITY&path=RTT/RTT_CANNED_TEXT_TITLE#Default%20Replies`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → RTT → ಡಿಫಾಲ್ಟ್ ಪ್ರತ್ಯುತ್ತರಗಳು → ಪ್ರತ್ಯುತ್ತರ ಸೇರಿಸಿ…: `bridge:root=ACCESSIBILITY&path=RTT/RTT_CANNED_TEXT_TITLE#Add%20reply%E2%80%A6`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಮೊನೊ ಆಡಿಯೊ: `bridge:root=ACCESSIBILITY#MonoAudioEnabled`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಎಡ-ಬಲ ಸ್ಟೀರಿಯೋ ಬ್ಯಾಲೆನ್ಸ್: `bridge:root=ACCESSIBILITY#LEFT_RIGHT_BALANCE_SPOKEN`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಹೆಡ್‌ಫೋನ್ ನೋಟಿಫಿಕೇಷನ್‌ಗಳು: `bridge:root=ACCESSIBILITY#HeadphoneNotificationsID`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಶ್ರವಣ ಸಾಧನಗಳು: `bridge:root=ACCESSIBILITY#HearingDevicesComplicationGroupID`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಕಾಂಪ್ಲಿಕೇಷನ್: `bridge:root=ACCESSIBILITY&path=HearingDevicesComplicationRowID`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಕಾಂಪ್ಲಿಕೇಷನ್ → ಮೈಕ್ ವಾಲ್ಯೂಮ್: `bridge:root=ACCESSIBILITY&path=HearingDevicesComplicationRowID#Mic%20Volume`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಕಾಂಪ್ಲಿಕೇಷನ್ → ಪ್ರೋಗ್ರಾಂ: `bridge:root=ACCESSIBILITY&path=HearingDevicesComplicationRowID#Program`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಟ್ಯಾಪ್ಟಿಕ್ ಸಮಯದ ವೇಗ: `bridge:root=ACCESSIBILITY#TapticTimeSpeedAdjustmentGroup`
- ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ → ಆ್ಯಕ್ಸೆಸಬಿಲಿಟಿ ಶಾರ್ಟ್‌ಕಟ್: `bridge:root=ACCESSIBILITY&path=AX_SHORTCUT`
- ತಿರುವಿನ ಅಲರ್ಟ್‌ಗಳು | ನಕ್ಷೆ: `bridge:root=com.apple.NanoMapsBridgeSettings`
- ತಿರುವಿನ ಅಲರ್ಟ್‌ಗಳು | ನಕ್ಷೆ → ತಿರುವಿನ ಅಲರ್ಟ್‌ಗಳು: `bridge:root=com.apple.NanoMapsBridgeSettings#Turn%20Alerts`
- ತಿರುವಿನ ಅಲರ್ಟ್‌ಗಳು | ನಕ್ಷೆ → ಡ್ರೈವಿಂಗ್: `bridge:root=com.apple.NanoMapsBridgeSettings#Driving`
- ತಿರುವಿನ ಅಲರ್ಟ್‌ಗಳು | ನಕ್ಷೆ → CarPlay ಜೊತೆಗೆ ಡ್ರೈವಿಂಗ್: `bridge:root=com.apple.NanoMapsBridgeSettings#Driving%20with%20CarPlay`
- ತಿರುವಿನ ಅಲರ್ಟ್‌ಗಳು | ನಕ್ಷೆ → ನಡಿಗೆ: `bridge:root=com.apple.NanoMapsBridgeSettings#Walking`
- ತಿರುವಿನ ಅಲರ್ಟ್‌ಗಳು | ನಕ್ಷೆ → ಸೈಕ್ಲಿಂಗ್: `bridge:root=com.apple.NanoMapsBridgeSettings#Cycling`
- ತಿರುವಿನ ಅಲರ್ಟ್‌ಗಳು | ನಕ್ಷೆ → ನ್ಯಾವಿಗೇಷನ್ ತೋರಿಸಿ: `bridge:root=com.apple.NanoMapsBridgeSettings#Show%20Navigation`
- ತಿರುವಿನ ಅಲರ್ಟ್‌ಗಳು | ನಕ್ಷೆ → ಸಾರಿಗೆ: `bridge:root=com.apple.NanoMapsBridgeSettings#Transit`
- ತಿರುವಿನ ಅಲರ್ಟ್‌ಗಳು | ನಕ್ಷೆ → ಬಿಲ್ಡ್ ಮಾಹಿತಿ:: `bridge:root=com.apple.NanoMapsBridgeSettings#Build%20Info%3A`
- Mail ಮತ್ತು ಕ್ಯಾಲೆಂಡರ್: `bridge:root=com.apple.BridgeRemoteAccounts`
- Mail ಮತ್ತು ಕ್ಯಾಲೆಂಡರ್ → ಖಾತೆಗಳು: `bridge:root=com.apple.BridgeRemoteAccounts#Accounts`
- Mail ಮತ್ತು ಕ್ಯಾಲೆಂಡರ್ → Google ಖಾತೆಯನ್ನು ಸೇರಿಸಿ…: `bridge:root=com.apple.BridgeRemoteAccounts#ADD_GOOGLE_ACCOUNT`
- Mail ಮತ್ತು ಕ್ಯಾಲೆಂಡರ್ → ಪಡೆಯಿರಿ: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch`
- Mail ಮತ್ತು ಕ್ಯಾಲೆಂಡರ್ → ಪಡೆಯಿರಿ → ಆಫ್: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch#Off`
- Mail ಮತ್ತು ಕ್ಯಾಲೆಂಡರ್ → ಪಡೆಯಿರಿ → ಪ್ರತಿ ಗಂಟೆ: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch#Hourly`
- Mail ಮತ್ತು ಕ್ಯಾಲೆಂಡರ್ → ಪಡೆಯಿರಿ → 30 ನಿಮಿಷ: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch#30%20min`
- Mail ಮತ್ತು ಕ್ಯಾಲೆಂಡರ್ → ಪಡೆಯಿರಿ → 15 ನಿಮಿಷ: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch#15%20min`
- ಹೃದಯ: `bridge:root=com.apple.HeartRateSettings`
- ಹೃದಯ → ಹೃದಯ: `bridge:root=com.apple.HeartRateSettings#1`
- ಹೃದಯ → ಹೃದಯ ಬಡಿತ ದರದ ಕುರಿತ ನೋಟಿಫಿಕೇಷನ್‌ಗಳು: `bridge:root=com.apple.HeartRateSettings#2`
- ಹೃದಯ → ಅಧಿಕ ಹೃದಯ ಬಡಿತದ ದರ: `bridge:root=com.apple.HeartRateSettings#3`
- ಹೃದಯ → ಕಡಿಮೆ ಹೃದಯ ಬಡಿತದ ದರ: `bridge:root=com.apple.HeartRateSettings#4`
- ಹೃದಯ → ಅನಿಯಮಿತ ಲಯ: `bridge:root=com.apple.HeartRateSettings#5`
- ಹೃದಯ → ಆರೋಗ್ಯ ಆ್ಯಪ್‌ನಲ್ಲಿ ರೆಕಾರ್ಡ್ ಮಾಡಿದ ECGಗಳನ್ನು ನೋಡಿ: `bridge:root=com.apple.HeartRateSettings#6`
- ಹೃದಯ → ECG: `bridge:root=com.apple.HeartRateSettings#7`
- App Store: `bridge:root=com.apple.BridgeAppStoreDaemonSettings`
- App Store → ಸ್ವಯಂಚಾಲಿತ ಡೌನ್‌ಲೋಡ್‌ಗಳು: `bridge:root=com.apple.BridgeAppStoreDaemonSettings#automaticDownloadSpecifier`
- App Store → ಸ್ವಯಂಚಾಲಿತ ಅಪ್‌ಡೇಟ್‌ಗಳು: `bridge:root=com.apple.BridgeAppStoreDaemonSettings#Automatic%20Updates`
- ನಿದ್ರೆ: `bridge:root=com.apple.NanoBedtimeBridgeSettings`
- ನಿದ್ರೆ → ಆರೋಗ್ಯ ಆ್ಯಪ್‌ನಲ್ಲಿ ನಿದ್ರೆಯನ್ನು ಸೆಟಪ್ ಮಾಡಿ: `bridge:root=com.apple.NanoBedtimeBridgeSettings#SET_UP_SLEEP_CELL_ID`
- ಸಂಗೀತ | ಸಂಗ್ರಹಣೆ ಮಿತಿ | ಸಿಂಕ್ ಮಾಡಿರುವ ಸಂಗೀತ: `bridge:root=com.apple.NanoMusicBridgeSettings`
- ಸಂಗೀತ | ಸಂಗ್ರಹಣೆ ಮಿತಿ | ಸಿಂಕ್ ಮಾಡಿರುವ ಸಂಗೀತ → ಪ್ಲೇಲಿಸ್ಟ್‌ಗಳು ಮತ್ತು ಆಲ್ಬಮ್‌ಗಳು: `bridge:root=com.apple.NanoMusicBridgeSettings#PLAYLISTS%20&%20ALBUMS`
- ಸಂಗೀತ | ಸಂಗ್ರಹಣೆ ಮಿತಿ | ಸಿಂಕ್ ಮಾಡಿರುವ ಸಂಗೀತ → ಸಂಗೀತವನ್ನು ಸೇರಿಸಿ…: `bridge:root=com.apple.NanoMusicBridgeSettings#Add%20Music%E2%80%A6`
- Wallet ಹಾಗೂ Apple Pay: `bridge:root=com.apple.NanoPassbookBridgeSettings`
- Wallet ಹಾಗೂ Apple Pay → Apple Cash: `bridge:root=com.apple.NanoPassbookBridgeSettings#Apple%C2%A0Cash`
- Wallet ಹಾಗೂ Apple Pay → ಕಾರ್ಡ್ ಸೇರಿಸಿ: `bridge:root=com.apple.NanoPassbookBridgeSettings#Add%20Card`
- Wallet ಹಾಗೂ Apple Pay → ನೋಟಿಫಿಕೇಷನ್‌ಗಳು: `bridge:root=com.apple.NanoPassbookBridgeSettings#MIRROR_RADIO_GROUP_ID`
- Wallet ಹಾಗೂ Apple Pay → ನನ್ನ iPhone ಮಿರರ್ ಮಾಡಿ: `bridge:root=com.apple.NanoPassbookBridgeSettings#MIRROR_MY_COMPANION_ID`
- Wallet ಹಾಗೂ Apple Pay → ಕಸ್ಟಮ್: `bridge:root=com.apple.NanoPassbookBridgeSettings#CUSTOM_ID`
- ಆರೋಗ್ಯ: `bridge:root=com.apple.BridgeHealthSettings`
- ನನ್ನ Apple Watch ಹುಡುಕಿ: `bridge:root=ActiveWatch`
- ನನ್ನ Apple Watch ಹುಡುಕಿ → ಹೊಸ Watch ಅನ್ನು ಪೇರ್ ಮಾಡಿ: `bridge:root=ActiveWatch&path=Pair%20New%20Watch`
- ಮೈಂಡ್‌ಫುಲ್‌ನೆಸ್: `bridge:root=com.apple.MindSettings`
- ಮೈಂಡ್‌ಫುಲ್‌ನೆಸ್ → ನೋಟಿಫಿಕೇಷನ್‌ಗಳನ್ನು ಅನುಮತಿಸಿ: `bridge:root=com.apple.MindSettings#ALLOW_NOTIFICATIONS_ID`
- ಮೈಂಡ್‌ಫುಲ್‌ನೆಸ್ → ನೋಟಿಫಿಕೇಷನ್ ಸೆಂಟರ್‌ಗೆ ಕಳುಹಿಸಿ: `bridge:root=com.apple.MindSettings#SEND_TO_NOTIFICATION_CENTER_ID`
- ಮೈಂಡ್‌ಫುಲ್‌ನೆಸ್ → ನೋಟಿಫಿಕೇಷನ್‌ಗಳು ಆಫ್: `bridge:root=com.apple.MindSettings#NOTIFICATIONS_OFF_ID`
- ಮೈಂಡ್‌ಫುಲ್‌ನೆಸ್ → ಮೈಂಡ್‌ಫುಲ್‌ನೆಸ್ ರಿಮೈಂಡರ್‌ಗಳು: `bridge:root=com.apple.MindSettings#MIND_GROUP_ID`
- ಮೈಂಡ್‌ಫುಲ್‌ನೆಸ್ → ದಿನದ ಪ್ರಾರಂಭ: `bridge:root=com.apple.MindSettings#MIND_START_OF_DAY_REMINDER`
- ಮೈಂಡ್‌ಫುಲ್‌ನೆಸ್ → ದಿನದ ಮುಕ್ತಾಯ: `bridge:root=com.apple.MindSettings#MIND_END_OF_DAY_REMINDER`
- ಮೈಂಡ್‌ಫುಲ್‌ನೆಸ್ → ರಿಮೈಂಡರ್ ಸೇರಿಸಿ…: `bridge:root=com.apple.MindSettings#Add%20Reminder%E2%80%A6`
- ಮೈಂಡ್‌ಫುಲ್‌ನೆಸ್ → ವಾರದ ಸಾರಾಂಶ: `bridge:root=com.apple.MindSettings#MIND_WEEKLY_SUMMARY_ID`
- ಮೈಂಡ್‌ಫುಲ್‌ನೆಸ್ → ಈ ದಿನದ ಮಟ್ಟಿಗೆ ಮ್ಯೂಟ್ ಮಾಡಿ: `bridge:root=com.apple.MindSettings#MIND_MUTE_FOR_TODAY_ID`
- ಮೈಂಡ್‌ಫುಲ್‌ನೆಸ್ → ಉಸಿರಾಟದ ದರ: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID`
- ಮೈಂಡ್‌ಫುಲ್‌ನೆಸ್ → ಉಸಿರಾಟದ ದರ → ಪ್ರತಿ ನಿಮಿಷಕ್ಕೆ 4 ಉಸಿರಾಟಗಳು: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_4`
- ಮೈಂಡ್‌ಫುಲ್‌ನೆಸ್ → ಉಸಿರಾಟದ ದರ → ಪ್ರತಿ ನಿಮಿಷಕ್ಕೆ 5 ಉಸಿರಾಟಗಳು: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_5`
- ಮೈಂಡ್‌ಫುಲ್‌ನೆಸ್ → ಉಸಿರಾಟದ ದರ → ಪ್ರತಿ ನಿಮಿಷಕ್ಕೆ 6 ಉಸಿರಾಟಗಳು: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_6`
- ಮೈಂಡ್‌ಫುಲ್‌ನೆಸ್ → ಉಸಿರಾಟದ ದರ → ಪ್ರತಿ ನಿಮಿಷಕ್ಕೆ 7 ಉಸಿರಾಟಗಳು: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_7`
- ಮೈಂಡ್‌ಫುಲ್‌ನೆಸ್ → ಉಸಿರಾಟದ ದರ → ಪ್ರತಿ ನಿಮಿಷಕ್ಕೆ 8 ಉಸಿರಾಟಗಳು: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_8`
- ಮೈಂಡ್‌ಫುಲ್‌ನೆಸ್ → ಉಸಿರಾಟದ ದರ → ಪ್ರತಿ ನಿಮಿಷಕ್ಕೆ 9 ಉಸಿರಾಟಗಳು: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_9`
- ಮೈಂಡ್‌ಫುಲ್‌ನೆಸ್ → ಉಸಿರಾಟದ ದರ → ಪ್ರತಿ ನಿಮಿಷಕ್ಕೆ 10 ಉಸಿರಾಟಗಳು: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_10`
- ಮೈಂಡ್‌ಫುಲ್‌ನೆಸ್ → ಹ್ಯಾಪ್ಟಿಕ್‌ಗಳು: `bridge:root=com.apple.MindSettings&path=MIND_HAPTICS_ID`
- ಮೈಂಡ್‌ಫುಲ್‌ನೆಸ್ → ಹ್ಯಾಪ್ಟಿಕ್‌ಗಳು → ಯಾವುದೂ ಅಲ್ಲ: `bridge:root=com.apple.MindSettings&path=MIND_HAPTICS_ID#NONE_ID`
- ಮೈಂಡ್‌ಫುಲ್‌ನೆಸ್ → ಹ್ಯಾಪ್ಟಿಕ್‌ಗಳು → ಕನಿಷ್ಠ: `bridge:root=com.apple.MindSettings&path=MIND_HAPTICS_ID#MINIMAL_ID`
- ಮೈಂಡ್‌ಫುಲ್‌ನೆಸ್ → ಹ್ಯಾಪ್ಟಿಕ್‌ಗಳು → ಪ್ರಮುಖ: `bridge:root=com.apple.MindSettings&path=MIND_HAPTICS_ID#PROMINENT_ID`
- ಪಾಡ್‌ಕಾಸ್ಟ್ಸ್: `bridge:root=com.apple.private.PodcastsBridgeSettings`
- ಫೋನ್: `bridge:root=com.apple.PhoneBridgeSettings`
- ಫೋನ್ → ಕರೆಗಳು: `bridge:root=com.apple.PhoneBridgeSettings#carrier_direct_calling_group_id`
- ಫೋನ್ → ರಿಂಗ್‌ಟೋನ್: `bridge:root=com.apple.PhoneBridgeSettings#RINGTONE`
- ಫೋನ್ → ಸೌಂಡ್: `bridge:root=com.apple.PhoneBridgeSettings#INCOMING_CALL_SOUND`
- ಫೋನ್ → ಹ್ಯಾಪ್ಟಿಕ್: `bridge:root=com.apple.PhoneBridgeSettings#INCOMING_CALL_HAPTIC`
- ಡೆಪ್ತ್: `bridge:root=com.apple.DepthCompanionSettings`
- ಆ್ಯಕ್ಷನ್ ಬಟನ್: `bridge:root=STING_TITLE`
- ನೆಟ್‌ವರ್ಕ್ ಪೂರೈಕೆದಾರರ ಸೆಟ್ಟಿಂಗ್ಸ್: `bridge:root=CARRIER_SETTINGS`
- ಮೊಬೈಲ್ ಸೇವೆ: `bridge:root=CELLULAR_ID`
- Dock: `bridge:root=DOCK`
- Dock → Dock ಕ್ರಮವಾದ ಹೊಂದಾಣಿಕೆ: `bridge:root=DOCK#OrderingOptionGroup`
- Dock → ಇತ್ತೀಚಿನವುಗಳು: `bridge:root=DOCK#Recents`
- Dock → ಮೆಚ್ಚಿನವುಗಳು: `bridge:root=DOCK#Favorites`
- Dock: `bridge:root=DOCK.0`
- Dock → Dock ಕ್ರಮವಾದ ಹೊಂದಾಣಿಕೆ: `bridge:root=DOCK.0#OrderingOptionGroup`
- Dock → ಇತ್ತೀಚಿನವುಗಳು: `bridge:root=DOCK.0#Recents`
- Dock → ಮೆಚ್ಚಿನವುಗಳು: `bridge:root=DOCK.0#Favorites`
- ಆಡಿಯೊಬುಕ್‌ಗಳು: `bridge:root=com.apple.NanoBooks.BridgeSettings`
- ಆಡಿಯೊಬುಕ್‌ಗಳು → ಸೈನ್ ಇನ್ ಮಾಡಿ: `bridge:root=com.apple.NanoBooks.BridgeSettings#Sign%20In`
- ಫೋಟೋ ಆಲ್ಬಮ್ ಆಯ್ಕೆಮಾಡಲಾಗಿದೆ | ಫೋಟೋಗಳ ಮಿತಿ: `bridge:root=com.apple.mobileslideshow`
- ಓದಿದ ಸ್ವೀಕೃತಿಗಳನ್ನು ಕಳುಹಿಸಿ: `bridge:root=com.apple.MessagesBridgeSettings%23READ_RECEIPTS`